--- a/poetry/唐词.md
+++ b/poetry/唐词.md
@@ -88,6 +88,15 @@
 思悠悠，恨悠悠，恨到归时方始休。月明人倚楼。
 ```
 
+## 花非花
+### 唐代：白居易
+```
+花非花，雾非雾。
+夜半来，天明去。
+来如春梦几多时？
+去似朝云无觅处。
+```
+
 ## 望江南·梳洗罢
 ### 唐代：温庭筠
 ```
