--- a/poetry/唐诗.md
+++ b/poetry/唐诗.md
@@ -26,6 +26,24 @@
 因思杜陵梦，凫雁满回塘。
 ```
 
+## 望月怀远 / 望月怀古
+### 唐代：张九龄
+```
+海上生明月，天涯共此时。
+情人怨遥夜，竟夕起相思。
+灭烛怜光满，披衣觉露滋。
+不堪盈手赠，还寝梦佳期。
+```
+
+## 杳杳寒山道
+### 唐代：寒山
+```
+杳杳寒山道，落落冷涧滨。
+啾啾常有鸟，寂寂更无人。
+淅淅风吹面，纷纷雪积身。
+朝朝不见日，岁岁不知春。
+```
+
 ## 春江花月夜
 ### 唐代：张若虚
 ```
@@ -72,6 +90,30 @@
 春蚕到死丝方尽，蜡炬成灰泪始干。
 晓镜但愁云鬓改，夜吟应觉月光寒。
 蓬山此去无多路，青鸟殷勤为探看。(蓬山 一作：蓬莱)
+```
+
+## 无题四首
+### 唐代：李商隐
+```
+来是空言去绝踪，月斜楼上五更钟。
+梦为远别啼难唤，书被催成墨未浓。
+蜡照半笼金翡翠，麝熏微度绣芙蓉。
+刘郎已恨蓬山远，更隔蓬山一万重。
+
+飒飒东风细雨来，芙蓉塘外有轻雷。
+金蟾啮锁烧香入，玉虎牵丝汲井回。
+贾氏窥帘韩掾少，宓妃留枕魏王才。
+春心莫共花争发，一寸相思一寸灰。
+
+含情春晼晚，暂见夜阑干。
+楼响将登怯，帘烘欲过难。
+多羞钗上燕，真愧镜中鸾。
+归去横塘晓，华星送宝鞍。
+
+何处哀筝随急管，樱花永巷垂杨岸。
+东家老女嫁不售，白日当天三月半。
+溧阳公主年十四，清明暖后同墙看。
+归来展转到五更，梁间燕子闻长叹。
 ```
 
 ## 夜雨寄北
@@ -261,6 +303,13 @@
 谁爱风流高格调，共怜时世俭梳妆。
 敢将十指夸针巧，不把双眉斗画长。
 苦恨年年压金线，为他人作嫁衣裳。
+```
+
+## 送日本国僧敬龙归
+### 唐代：韦庄
+```
+扶桑已在渺茫中，家在扶桑东更东。 
+此去与师谁共到，一船明月一帆风。
 ```
 
 ## 金陵图
@@ -454,6 +503,24 @@
 偶然值林叟，谈笑无还期。
 ```
 
+## 代悲白头翁
+### 唐代：刘希夷
+```
+洛阳城东桃李花，飞来飞去落谁家？
+洛阳女儿惜颜色，坐见落花长叹息。
+今年花落颜色改，明年花开复谁在？
+已见松柏摧为薪，更闻桑田变成海。
+古人无复洛城东，今人还对落花风。
+年年岁岁花相似，岁岁年年人不同。
+寄言全盛红颜子，应怜半死白头翁。
+此翁白头真可怜，伊昔红颜美少年。
+公子王孙芳树下，清歌妙舞落花前。
+光禄池台文锦绣，将军楼阁画神仙。
+一朝卧病无相识，三春行乐在谁边？
+宛转蛾眉能几时？须臾鹤发乱如丝。
+但看古来歌舞地，唯有黄昏鸟雀悲。
+```
+
 ## 菩提偈
 ### 唐代：惠能
 ```
@@ -550,11 +617,20 @@
 不知细叶谁裁出，二月春风似剪刀。
 ```
 
-## 陇西行四首·其二
+## 陇西行四首
 ### 唐代：陈陶
 ```
+汉主东封报太平，无人金阙议边兵。
+纵饶夺得林胡塞，碛地桑麻种不生。
+
 誓扫匈奴不顾身，五千貂锦丧胡尘。
-可怜无定河边骨，犹是春闺梦里人！(春闺 一作：深闺)
+可怜无定河边骨，犹是春闺梦里人。
+
+陇戍三看塞草青，楼烦新替护羌兵。
+同来死者伤离别，一夜孤魂哭旧营。
+
+黠虏生擒未有涯，黑山营阵识龙蛇。
+自从贵主和亲后，一半胡风似汉家。
 ```
 
 ## 宿建德江
@@ -562,6 +638,15 @@
 ```
 移舟泊烟渚，日暮客愁新。
 野旷天低树，江清月近人
+```
+
+## 过故人庄
+### 唐代：孟浩然
+```
+故人具鸡黍，邀我至田家。
+绿树村边合，青山郭外斜。
+开轩面场圃，把酒话桑麻。
+待到重阳日，还来就菊花。
 ```
 
 ## 登幽州台歌
@@ -576,6 +661,13 @@
 ```
 一为迁客去长沙，西望长安不见家。 
 黄鹤楼中吹玉笛，江城五月落梅花。
+```
+
+## 春夜洛城闻笛 / 春夜洛阳城闻笛
+### 唐代：李白
+```
+谁家玉笛暗飞声，散入春风满洛城。 
+此夜曲中闻折柳，何人不起故园情。
 ```
 
 ## 宣州谢脁楼饯别校书叔云
@@ -781,6 +873,15 @@
 蜀道之难,难于上青天，侧身西望长咨嗟！
 ```
 
+## 黄鹤楼 / 登黄鹤楼
+### 唐代：崔颢
+```
+昔人已乘黄鹤去，此地空余黄鹤楼。
+黄鹤一去不复返，白云千载空悠悠。
+晴川历历汉阳树，芳草萋萋鹦鹉洲。
+日暮乡关何处是？烟波江上使人愁。
+```
+
 ## 寄人
 ### 唐代：张泌
 ```
@@ -805,6 +906,18 @@
 妾家高楼连苑起，良人执戟明光里。
 知君用心如日月，事夫誓拟同生死。
 还君明珠双泪垂，恨不相逢未嫁时。
+```
+
+## 夜雨
+### 唐代：白居易
+```
+我有所念人，隔在远远乡。
+我有所感事，结在深深肠。
+乡远去不得，无日不瞻望。
+肠深解不得，无夕不思量。
+况此残灯夜，独宿在空堂。
+秋天殊未晓，风雨正苍苍。
+不学头陀法，前心安可忘。
 ```
 
 ## 草 / 赋得古原草送别
@@ -832,6 +945,13 @@
 漳浦老身三度病，咸阳宿草八回秋。
 君埋泉下泥销骨，我寄人间雪满头。
 阿卫韩郎相次去，夜台茫昧得知不？
+```
+
+## 山泉煎茶有怀
+### 唐代：白居易
+```
+坐酌泠泠水，看煎瑟瑟尘。
+无由持一碗，寄与爱茶人。
 ```
 
 ## 问刘十九
@@ -962,6 +1082,23 @@
 感我此言良久立，却坐促弦弦转急。
 凄凄不似向前声，满座重闻皆掩泣。
 座中泣下谁最多？江州司马青衫湿。
+```
+
+## 赠卫八处士
+### 唐代：杜甫
+```
+人生不相见，动如参与商。
+今夕复何夕，共此灯烛光。
+少壮能几时，鬓发各已苍。
+访旧半为鬼，惊呼热中肠。
+焉知二十载，重上君子堂。
+昔别君未婚，儿女忽成行。
+怡然敬父执，问我来何方。
+问答未及已，儿女罗酒浆。
+夜雨剪春韭，新炊间黄粱。
+主称会面难，一举累十觞。
+十觞亦不醉，感子故意长。
+明日隔山岳，世事两茫茫。
 ```
 
 ## 江南逢李龟年
@@ -1110,6 +1247,13 @@
 生女犹得嫁比邻，生男埋没随百草。
 君不见，青海头，古来白骨无人收。
 新鬼烦冤旧鬼哭，天阴雨湿声啾啾！
+```
+
+## 渡汉江
+### 唐代：宋之问
+```
+岭外音书断，经冬复历春。
+近乡情更怯，不敢问来人。
 ```
 
 ## 题龙阳县青草湖
