--- a/poetry/宋词.md
+++ b/poetry/宋词.md
@@ -22,13 +22,25 @@
 雪沫乳花浮午盏，蓼茸蒿笋试春盘。人间有味是清欢。
 ```
 
+## 行香子·述怀
+### 宋代：苏轼
+```
+清夜无尘。月色如银。酒斟时、须满十分。
+浮名浮利，虚苦劳神。叹隙中驹，石中火，梦中身。
+虽抱文章，开口谁亲。且陶陶、乐尽天真。
+几时归去，作个闲人。对一张琴，一壶酒，一溪云。
+```
+
 ## 水调歌头·黄州快哉亭赠张偓佺
 ### 宋代：苏轼
 ```
 落日绣帘卷，亭下水连空。知君为我新作，窗户湿青红。
-长记平山堂上，欹枕江南烟雨，杳杳没孤鸿。认得醉翁语，山色有无中。
+长记平山堂上，欹枕江南烟雨，杳杳没孤鸿。
+认得醉翁语，山色有无中。
+
 一千顷，都镜净，倒碧峰。忽然浪起，掀舞一叶白头翁。
-堪笑兰台公子，未解庄生天籁，刚道有雌雄。一点浩然气，千里快哉风。
+堪笑兰台公子，未解庄生天籁，刚道有雌雄。
+一点浩然气，千里快哉风。
 ```
 
 ## 临江仙·夜饮东坡醒复醉
@@ -111,6 +123,15 @@
 为报倾城随太守，亲射虎，看孙郎。
 酒酣胸胆尚开张，鬓微霜，又何妨！持节云中，何日遣冯唐？
 会挽雕弓如满月，西北望，射天狼。
+```
+
+## 定风波·南海归赠王定国侍人寓娘
+### 宋代：苏轼
+```
+常羡人间琢玉郎，天应乞与点酥娘。
+尽道清歌传皓齿，风起，雪飞炎海变清凉。
+万里归来颜愈少，微笑，笑时犹带岭梅香。
+试问岭南应不好，却道：此心安处是吾乡。
 ```
 
 ## 临江仙·送钱穆父
@@ -390,6 +411,15 @@
 谁怜今夜篷窗雨，何处渔村。酒冷灯昏。不许愁人不断魂。
 ```
 
+## 思越人·紫府东风放夜时
+### 宋代：贺铸
+```
+紫府东风放夜时。步莲秾李伴人归。
+五更钟动笙歌散，十里月明灯火稀。 
+香苒苒，梦依依。天涯寒尽减春衣。
+凤凰城阙知何处，寥落星河一雁飞。
+```
+
 ## 青玉案·凌波不过横塘路
 ### 宋代：贺铸
 ```
@@ -402,6 +432,15 @@
 锦瑟华年谁与度？月台花榭，琐窗朱户，只有春知处。
 碧云冉冉蘅皋暮，彩笔新题断肠句。
 试问闲愁都几许？一川烟草，满城风絮，梅子黄时雨。(版本二)
+```
+
+## 南柯子·山冥云阴重
+### 宋代：王炎
+```
+山冥云阴重，天寒雨意浓。
+数枝幽艳湿啼红。莫为惜花惆怅对东风。
+蓑笠朝朝出，沟塍处处通。
+人间辛苦是三农。要得一犁水足望年丰。
 ```
 
 ## 卜算子·咏梅
@@ -434,6 +473,15 @@
 晓风干，泪痕残。欲笺心事，独语斜阑。难，难，难！
 人成各，今非昨，病魂常似秋千索。
 角声寒，夜阑珊。怕人寻问，咽泪装欢。瞒，瞒，瞒！(装欢 通：妆)
+```
+
+## 渔家傲·小雨纤纤风细细
+### 宋代：朱服
+```
+小雨纤纤风细细，万家杨柳青烟里。
+恋树湿花飞不起，愁无比，和春付与东流水。
+九十光阴能有几？金龟解尽留无计。
+寄语东阳沽酒市，拼一醉，而今乐事他年泪。
 ```
 
 ## 苏幕遮·怀旧
@@ -532,6 +580,42 @@
 求田问舍，怕应羞见，刘郎才气。
 可惜流年，忧愁风雨，树犹如此！
 倩何人唤取，红巾翠袖，揾英雄泪！
+```
+
+## 贺新郎·别茂嘉十二弟
+### 宋代：辛弃疾
+
+> 别茂嘉十二弟。鹈鴂、杜鹃实两种，见《离骚补注》
+
+```
+绿树听鹈鴂。更那堪、鹧鸪声住，杜鹃声切。
+啼到春归无寻处，苦恨芳菲都歇。
+算未抵、人间离别。
+马上琵琶关塞黑，更长门、翠辇辞金阙。看燕燕，送归妾。
+
+将军百战身名裂。向河梁、回头万里，故人长绝。
+易水萧萧西风冷，满座衣冠似雪。
+正壮士、悲歌未彻。
+啼鸟还知如许恨，料不啼清泪长啼血。谁共我，醉明月。
+```
+
+## 贺新郎·甚矣吾衰矣
+###宋代：辛弃疾
+
+> 邑中园亭，仆皆为赋此词。一日，独坐停云，水声山色，竞来相娱。意溪山欲援例者，遂作数语，庶几仿佛渊明思亲友之意云。
+
+```
+甚矣吾衰矣。怅平生、交游零落，只今馀几！
+白发空垂三千丈，一笑人间万事。
+问何物、能令公喜？
+我见青山多妩媚，料青山见我应如是。
+情与貌，略相似。
+
+一尊搔首东窗里。想渊明《停云》诗就，此时风味。
+江左沉酣求名者，岂识浊醪妙理
+。回首叫、云飞风起。
+不恨古人吾不见，恨古人不见吾狂耳。
+知我者，二三子。
 ```
 
 ## 满江红·写怀
@@ -705,6 +789,25 @@
 此后锦书休寄，画楼云雨无凭。
 ```
 
+## 虞美人·寄公度
+### 宋代：舒亶
+```
+芙蓉落尽天涵水，日暮沧波起。
+背飞双燕贴云寒，独向小楼东畔、倚阑看。 
+浮生只合尊前老，雪满长安道。
+故人早晚上高台，赠我江南春色、一枝梅。
+```
+
+## 车遥遥篇
+### 宋代：范成大
+```
+车遥遥，马憧憧。
+君游东山东复东，安得奋飞逐西风。
+愿我如星君如月，夜夜流光相皎洁。
+月暂晦，星常明。
+留明待月复，三五共盈盈。
+```
+
 ## 山之高三章
 ### 宋代：张玉娘
 ```
@@ -842,11 +945,12 @@
 夜过也，东窗未白凝残月。(凝残月 一作：孤灯灭)
 ```
 
-## 蚕妇
-### 宋代：张俞
+## 五禽言和王仲衡尚书 其二
+### 宋代：朱熹
 ```
-昨日入城市，归来泪满巾。
-遍身罗绮者，不是养蚕人。
+不如归去，孤城越绝三春暮。
+故山只在白云间，望极云深不知处。
+不如归去不如归，千仞冈头一振衣。
 ```
 
 ## 唐多令·芦叶满汀洲
@@ -888,15 +992,37 @@
 ## 九张机
 ### 宋代：无名氏
 ```
-一张机。织梭光景去如飞。兰房夜永愁无寐。呕呕轧轧，织成春恨，留著待郎归。
-两张机。月明人静漏声稀。千丝万缕相萦系。织成一段，回纹锦字。将去寄呈伊。
-三张机。中心有朵耍花儿。娇红嫩绿春明媚。君须早折，一枝浓艳，莫待过芳菲。
-四张机。鸳鸯织就欲双飞。可怜未老头先白，春波碧草，晓寒深处，相对浴红衣。
-五张机。芳心密与巧心期。合欢树上枝连理。双头花下，两同心处，一对化生儿。
-六张机。雕花铺锦半离披。兰房别有留春计。炉添小篆，日长一线，相对绣工迟。
-七张机。春蚕吐尽一生丝。莫教容易裁罗绮。无端剪破，仙鸾彩凤，分作两般衣。
-八张机。纤纤玉手住无时。蜀江濯尽春波媚。香遗囊麝，花房绣被。归去意迟迟。
-九张机。一心长在百花枝。百花共作红堆被。都将春色，藏头里面，不怕睡多时。
-轻丝。象床玉手出新奇。千花万草光凝碧。裁缝衣著，春天歌舞，飞蝶语黄鹂。
-春衣。素丝染就已堪悲。尘世昏污无颜色。应同秋扇，从兹永弃。无复奉君时。
+一张机。
+织梭光景去如飞。兰房夜永愁无寐。
+呕呕轧轧，织成春恨，留著待郎归。
+两张机。
+月明人静漏声稀。千丝万缕相萦系。
+织成一段，回纹锦字。将去寄呈伊。
+三张机。
+中心有朵耍花儿。娇红嫩绿春明媚。
+君须早折，一枝浓艳，莫待过芳菲。
+四张机。
+鸳鸯织就欲双飞。可怜未老头先白，
+春波碧草，晓寒深处，相对浴红衣。
+五张机。
+芳心密与巧心期。合欢树上枝连理。
+双头花下，两同心处，一对化生儿。
+六张机。
+雕花铺锦半离披。兰房别有留春计。
+炉添小篆，日长一线，相对绣工迟。
+七张机。
+春蚕吐尽一生丝。莫教容易裁罗绮。
+无端剪破，仙鸾彩凤，分作两般衣。
+八张机。
+纤纤玉手住无时。蜀江濯尽春波媚。
+香遗囊麝，花房绣被。归去意迟迟。
+九张机。
+一心长在百花枝。百花共作红堆被。
+都将春色，藏头里面，不怕睡多时。
+轻丝。
+象床玉手出新奇。千花万草光凝碧。
+裁缝衣著，春天歌舞，飞蝶语黄鹂。
+春衣。
+素丝染就已堪悲。尘世昏污无颜色。
+应同秋扇，从兹永弃。无复奉君时。
 ```
