--- a/poetry/宋诗.md
+++ b/poetry/宋诗.md
@@ -22,6 +22,15 @@
 已作迟迟君去鲁，犹教缓缓妾还家。
 ```
 
+## 六月二十日夜渡海
+### 宋代：苏轼
+```
+参横斗转欲三更，苦雨终风也解晴。
+云散月明谁点缀？天容海色本澄清。
+空余鲁叟乘桴意，粗识轩辕奏乐声。
+九死南荒吾不恨，兹游奇绝冠平生。
+```
+
 ## 再用前韵
 ### 宋代：苏轼
 ```
@@ -61,11 +70,56 @@
 欲把西湖比西子，淡妆浓抹总相宜。
 ```
 
+## 和子由渑池怀旧
+### 宋代：苏轼
+```
+人生到处知何似，应似飞鸿踏雪泥。
+泥上偶然留指爪，鸿飞那复计东西。
+老僧已死成新塔，坏壁无由见旧题。
+往日崎岖还记否，路长人困蹇驴嘶。
+```
+
+## 庐山烟雨浙江潮
+### 宋代：苏轼
+```
+庐山烟雨浙江潮，未至千般恨不消。
+到得还来别无事，庐山烟雨浙江潮。
+```
+
+## 留别妻
+### 两汉：苏武
+```
+结发为夫妻，恩爱两不疑。
+欢娱在今夕，嬿婉及良时。
+征夫怀远路，起视夜何其？
+参辰皆已没，去去从此辞。
+行役在战场，相见未有期。
+握手一长叹，泪为生别滋。
+努力爱春华，莫忘欢乐时。
+生当复来归，死当长相思。
+```
+
+## 送湖南部曲
+### 宋代：辛弃疾
+```
+青衫匹马万人呼，幕府当年急急符。
+愧我明珠成薏苡，负君赤手缚於菟。
+观书老眼明如镜，论事惊人胆满躯。
+万里云霄送君去，不妨风雨破吾庐。
+```
+
 ## 泊船瓜洲
 ### 宋代：王安石
 ```
 京口瓜洲一水间，钟山只隔数重山。
 春风又绿江南岸，明月何时照我还？
+```
+
+## 梅花
+### 宋代：王安石
+```
+墙角数枝梅，凌寒独自开。
+遥知不是雪，为有暗香来。
 ```
 
 ## 断句
@@ -151,6 +205,13 @@
 小楼一夜听春雨，深巷明朝卖杏花。
 矮纸斜行闲作草，晴窗细乳戏分茶。
 素衣莫起风尘叹，犹及清明可到家。
+```
+
+## 蚕妇
+### 宋代：张俞
+```
+昨日入城市，归来泪满巾。
+遍身罗绮者，不是养蚕人。
 ```
 
 ## 夏日绝句
