--- a/poetry/清诗.md
+++ b/poetry/清诗.md
@@ -34,6 +34,13 @@
 背灯和月就花阴，已是十年踪迹十年心。
 ```
 
+## 浣溪沙·谁念西风独自凉
+### 清代：纳兰性德
+```
+谁念西风独自凉，萧萧黄叶闭疏窗，沉思往事立残阳。
+被酒莫惊春睡重，赌书消得泼茶香，当时只道是寻常。
+```
+
 ## 采桑子·明月多情应笑我
 ### 清代：纳兰性德
 ```
@@ -53,6 +60,22 @@
 ```
 残雪凝辉冷画屏，落梅横笛已三更，更无人处月胧明。
 我是人间惆怅客，知君何事泪纵横，断肠声里忆平生。
+```
+
+## 画堂春·一生一代一双人
+### 清代：纳兰性德
+```
+一生一代一双人，争教两处销魂。
+相思相望不相亲，天为谁春。
+浆向蓝桥易乞，药成碧海难奔。
+若容相访饮牛津，相对忘贫。
+```
+
+## 马嵬
+### 清代：袁枚
+```
+莫唱当年长恨歌，人间亦自有银河。
+石壕村里夫妻别，泪比长生殿上多。
 ```
 
 ## 出塞
@@ -94,6 +117,12 @@
 此际闲愁郎不共，月移窗罅春寒重。
 忆共锦衾无半缝，郎似桐花，妾似桐花凤。
 往事迢迢徒入梦，银筝断续连珠弄。
+```
+
+## 《清稗类钞》“物品类”
+### 清代：查辛香
+```
+何时杖尔看南雪，我与梅花两白头
 ```
 
 ## 狱中题壁
@@ -167,6 +196,31 @@
 为君别唱吴宫曲，汉水东南日夜流！
 ```
 
+## 金缕曲二首
+### 清代：顾贞观
+
+> 寄吴汉槎宁古塔，以词代书，丙辰冬，寓京师千佛寺，冰雪中作。
+
+```
+季子平安否？便归来，平生万事，那堪回首！
+行路悠悠谁慰藉，母老家贫子幼。
+记不起，从前杯酒。
+魑魅搏人应见惯，总输他，覆雨翻云手，冰与雪，周旋久。
+泪痕莫滴牛衣透，数天涯，依然骨肉，几家能够？
+比似红颜多命薄，更不如今还有。
+只绝塞，苦寒难受。
+廿载包胥承一诺，盼乌头马角终相救。置此札，君怀袖。
+
+我亦飘零久！十年来，深恩负尽，死生师友。
+宿昔齐名非忝窃，只看杜陵消瘦。
+曾不减，夜郎僝僽，薄命长辞知己别，问人生到此凄凉否？
+千万恨，为君剖。(只看 一作：试看)
+兄生辛未吾丁丑，共此时，冰霜摧折，早衰蒲柳。
+诗赋从今须少作，留取心魂相守。
+但愿得，河清人寿！归日急翻行戍稿，把空名料理传身后。
+言不尽，观顿首。
+```
+
 ## 以下是《红楼梦》中的全部诗词
 
 ### 金陵十二钗（正册）
@@ -211,6 +265,7 @@
 > 《引子》
 > 开辟鸿蒙,谁为情种?都只为风月情浓.趁着这奈何天,伤怀日,寂寥时,试遣愚衷.因此上演出这怀金悼玉的<<红楼梦>>.
 >
+
 ```
 [终身误]
 都道是金玉良姻, 俺只念木石前盟.
@@ -236,7 +291,8 @@
 一帆风雨路三千,把骨肉家园齐来抛闪.
 恐哭损残年,告爹娘,休把儿悬念.
 自古穷通皆有定,离合岂无缘?
-从今分两地,各自保平安.奴去也,莫牵连.（探春）
+从今分两地,各自保平安.
+奴去也,莫牵连.（探春）
 
 [喜冤家]
 中山狼,无情兽,全不念当日根由.
@@ -260,18 +316,24 @@
 这是尘寰中消长数应当,何必枉悲伤!（湘云）
 
 [虚花悟]
-将那三春看破,桃红柳绿待如何?把这韶华打灭,觅那清淡天和.
-说什么,天上夭桃盛,云中杏蕊多.到头来,谁把秋捱过?
-则看那,白杨村里人呜咽,青枫林下鬼吟哦.更兼着,连天衰草遮坟墓.
-这的是,昨贫今富人劳碌,春荣秋谢花折磨.似这般,生关死劫谁能躲?
+将那三春看破,桃红柳绿待如何?
+把这韶华打灭,觅那清淡天和.
+说什么,天上夭桃盛,云中杏蕊多.
+到头来,谁把秋捱过?
+则看那,白杨村里人呜咽,青枫林下鬼吟哦.
+更兼着,连天衰草遮坟墓.
+这的是,昨贫今富人劳碌,春荣秋谢花折磨.
+似这般,生关死劫谁能躲?
 闻说道,西方宝树唤婆娑,上结着长生果.（惜春）
 
 [聪明累]
 机关算尽太聪明,反算了卿卿性命.
-生前心已碎,死后性空灵.家富人宁,终有个家亡人散各奔腾.
+生前心已碎,死后性空灵.
+家富人宁,终有个家亡人散各奔腾.
 枉费了,意悬悬半世心,好一似,荡悠悠三更梦.
 忽喇喇似大厦倾,昏惨惨似灯将尽.
-呀!一场欢喜忽悲辛.叹人世,终难定!（凤姐）
+呀!一场欢喜忽悲辛.
+叹人世,终难定!（凤姐）
 
 [留余庆]
 留余庆,留余庆,忽遇恩人,幸娘亲,幸娘亲, 积得阴功.
@@ -279,14 +341,18 @@
 正是乘除加减,上有苍穹.（巧姐）
 
 [好事终]
-画梁春尽落香尘.擅风情,秉月貌,便是败家的根本.
-箕裘颓堕皆从敬,家事消亡首罪宁.宿孽总因情.（秦可卿）
+画梁春尽落香尘.
+擅风情,秉月貌,便是败家的根本.
+箕裘颓堕皆从敬,家事消亡首罪宁.
+宿孽总因情.（秦可卿）
 
 [晚韶华]
-镜里恩情,更那堪梦里功名!那美韶华去之何迅!再休提锈帐鸳衾.
+镜里恩情,更那堪梦里功名!
+那美韶华去之何迅!再休提锈帐鸳衾.
 只这带珠冠,披凤袄,也抵不了无常性命.
 虽说是,人生莫受老来贫,也须要阴骘积儿孙.
-气昂昂头戴簪缨,光灿灿胸悬金印,威赫赫爵禄高登,昏惨惨黄泉路近.
+气昂昂头戴簪缨,光灿灿胸悬金印,
+威赫赫爵禄高登,昏惨惨黄泉路近.
 问古来将相可还存?也只是虚名儿与后人钦敬.（李纨）
 
 [收尾-飞鸟各投林]
@@ -505,14 +571,21 @@
     岂是绣绒残吐，卷起半帘香雾，纤手自拈来，空使鹃啼燕妒。
     且住，且住!莫使春光别去。
 西江月-宝琴
-    汉苑零星有限，隋堤点缀无穷，三春事业付东风，明月梅花一梦。
-    几处落红庭院，谁家香雪帘栊?江南江北一般同,，偏是离人恨重!
+    汉苑零星有限，隋堤点缀无穷，
+    三春事业付东风，明月梅花一梦。
+    几处落红庭院，谁家香雪帘栊?
+    江南江北一般同,，偏是离人恨重!
 唐多令-黛玉
-    粉堕百花州，香残燕子楼。一团团逐对成逑，飘泊亦如人命薄，空缱绻，说风流。
-    草木也知愁，韶华竟白头!叹今生谁舍谁收?嫁与东风春不管。凭尔去，忍淹留。
+    粉堕百花州，香残燕子楼。
+    一团团逐对成逑，飘泊亦如人命薄，空缱绻，说风流。
+    草木也知愁，韶华竟白头!
+    叹今生谁舍谁收?嫁与东风春不管。
+    凭尔去，忍淹留。
 临江仙-宝钗
-    白玉堂前春解舞， 东风卷得均匀。蜂团蝶阵乱纷纷，几曾随逝水，岂必委芳尘。
-    万缕千丝终不改，任他随聚随分。韶华休笑本无根，好风凭借力,，送我上青云!
+    白玉堂前春解舞， 东风卷得均匀。
+    蜂团蝶阵乱纷纷，几曾随逝水，岂必委芳尘。
+    万缕千丝终不改，任他随聚随分。
+    韶华休笑本无根，好风凭借力，送我上青云!
 ```
 
 ### 食螃蟹咏
@@ -929,8 +1002,10 @@
 
 #### 寄生草
 ```
-无我原非你，从他不解伊。肆行无碍凭来去，茫茫着甚悲愁喜。
-纷纷说甚亲疏密，从前碌碌却因何。到如今回头试想真无趣!
+无我原非你，从他不解伊。
+肆行无碍凭来去，茫茫着甚悲愁喜。
+纷纷说甚亲疏密，从前碌碌却因何。
+到如今回头试想真无趣!
 ```
 
 #### 作者缘起
