--- a/poetry/魏晋南北朝.md
+++ b/poetry/魏晋南北朝.md
@@ -39,15 +39,63 @@
 狗吠深巷中，鸡鸣桑树颠。(颠 通 巅)
 户庭无尘杂，虚室有余闲。
 久在樊笼里，复得返自然。
-```
-___
-## 归园田居·其三
-### 魏晋：陶渊明
-```
+
+野外罕人事，穷巷寡轮鞅。
+白日掩荆扉，虚室绝尘想。
+时复墟曲中，披草共来往。(墟曲中 一作：墟曲人)
+相见无杂言，但道桑麻长。
+桑麻日已长，我土日已广。
+常恐霜霰至，零落同草莽。
+
 种豆南山下，草盛豆苗稀。
 晨兴理荒秽，带月荷锄归。
 道狭草木长，夕露沾我衣。
 衣沾不足惜，但使愿无违。
+
+久去山泽游，浪莽林野娱。
+试携子侄辈，披榛步荒墟。
+徘徊丘垄间，依依昔人居。
+井灶有遗处，桑竹残朽株。
+借问采薪者，此人皆焉如？
+薪者向我言，死没无复余。
+一世异朝市，此语真不虚。
+人生似幻化，终当归空无。
+
+怅恨独策还，崎岖历榛曲。
+山涧清且浅，可以濯吾足。
+漉我新熟酒，只鸡招近局。
+日入室中暗，荆薪代明烛。
+欢来苦夕短，已复至天旭。
+
+种苗在东皋，苗生满阡陌。
+虽有荷锄倦，浊酒聊自适。
+日暮巾柴车，路暗光已夕。
+归人望烟火，稚子候檐隙。
+问君亦何为，百年会有役。
+但愿桑麻成，蚕月得纺绩。
+素心正如此，开径望三益。
+```
+
+## 和郭主簿 两首
+### 魏晋：陶渊明
+```
+蔼蔼堂前林，中夏贮清阴。
+凯风因时来，回飙开我襟。
+息交游闲业，卧起弄书琴。
+园蔬有余滋，旧谷犹储今。
+营己良有极，过足非所钦。
+舂秫作美酒，酒熟吾自斟。
+弱子戏我侧，学语未成音。
+此事真复乐，聊用忘华簪。
+遥遥望白云，怀古一何深！
+
+和泽周三春，清凉素秋节。
+露凝无游氛，天高肃景澈。
+陵岑耸逸峰，遥瞻皆奇绝。
+芳菊开林耀，青松冠岩列。
+怀此贞秀姿，卓为霜下杰。
+衔觞念幽人，千载抚尔诀。
+检素不获展，厌厌竟良月。
 ```
 
 ## 咏荆轲
@@ -68,6 +116,13 @@ ___
 图穷事自至，豪主正怔营。
 惜哉剑术疏，奇功遂不成。
 其人虽已没，千载有馀情。
+```
+
+## 赠范晔诗
+### 南北朝：陆凯
+```
+折花逢驿使，寄与陇头人。(折花 一作：折梅)
+江南无所有，聊赠一枝春。
 ```
 
 ## 观沧海
