--- a/poetry/明诗.md
+++ b/poetry/明诗.md
@@ -47,3 +47,10 @@
 (一作：千锤万击出深山 / 千鎚万击出深山)
 (一作：粉骨碎身全不惜 / 粉身碎骨浑不怕 / 粉身碎骨全不怕)
 ```
+
+## 重赠吴国宾
+### 明代：边贡
+```
+汉江明月照归人，万里秋风一叶身。
+休把客衣轻浣濯，此中犹有帝京尘。
+```
