add pomes and games

--- a/poetry/唐诗.md
+++ b/poetry/唐诗.md
@@ -657,10 +657,17 @@
 ```
 
 ## 与史郎中钦听黄鹤楼上吹笛 / 题北榭碑
-###唐代：李白
+### 唐代：李白
 ```
 一为迁客去长沙，西望长安不见家。 
 黄鹤楼中吹玉笛，江城五月落梅花。
+```
+
+## 苏台览古
+### 唐代：李白
+```
+旧苑荒台杨柳新，菱歌清唱不胜春。 
+只今惟有西江月，曾照吴王宫里人。
 ```
 
 ## 春夜洛城闻笛 / 春夜洛阳城闻笛
