--- a/poetry/唐词.md
+++ b/poetry/唐词.md
@@ -81,6 +81,22 @@
 妾拟将身嫁与一生休。纵被无情弃，不能羞。
 ```
 
+## 苦昼短
+### 唐代：李贺
+```
+飞光飞光，劝尔一杯酒。
+吾不识青天高，黄地厚。
+唯见月寒日暖，来煎人寿。
+食熊则肥，食蛙则瘦。
+神君何在？太一安有？
+天东有若木，下置衔烛龙。
+吾将斩龙足，嚼龙肉，使之朝不得回，夜不得伏。
+自然老者不死，少者不哭。
+何为服黄金、吞白玉？
+谁似任公子，云中骑碧驴？
+刘彻茂陵多滞骨，嬴政梓棺费鲍鱼。
+```
+
 ## 长相思·汴水流
 ### 唐代：白居易
 ```
