add head_and_stack and update some poems

--- a/poetry/元词.md
+++ b/poetry/元词.md
@@ -1,14 +1,14 @@
 # 元词
 
-## 琵琶行
-### 元代：高明
+### 琵琶行
+#### 元代：高明
 ```
 我本将心向明月，奈何明月照沟渠。
 落花有意随流水，流水无心恋落花。
 ```
 
-## 折桂令·春情
-### 元代：徐再思
+### 折桂令·春情
+#### 元代：徐再思
 ```
 平生不会相思，才会相思，便害相思。
 身似浮云，心如飞絮，气若游丝。
@@ -52,6 +52,15 @@
 断肠人在天涯。
 ```
 
+## 南乡子·南北短长亭
+### 元代：刘秉忠
+```
+南北短长亭，行路无情客有情。
+年去年来鞍马上，何成！短鬓垂垂雪几茎。
+孤舍一檠灯，夜夜看书夜夜明。
+窗外几竿君子竹，凄清，时作西风散雨声。
+```
+
 ## 人月圆·山中书事
 ### 元代：张可久
 ```
@@ -87,3 +96,12 @@
 碧云天，黄花地，西风紧，北雁南飞。
 晓来谁染霜林醉，总是离人泪。
 ```
+
+## 挽文丞相
+### 元代：虞集
+```
+徒把金戈挽落晖，南冠无奈北风吹。
+子房本为韩仇出，诸葛宁知汉祚移。
+云暗鼎湖龙去远，月明华表鹤归迟。
+不须更上新亭望，大不如前洒泪时。
+````
