--- a/poetry/唐诗.md
+++ b/poetry/唐诗.md
@@ -1,5 +1,32 @@
 # 唐诗
 
+## 挽舟者歌
+### 隋代：佚名
+```
+我兄征辽东，饿死青山下。
+今我挽龙舟，又阻隋堤道。
+方今天下饥，路粮无些小。
+前去三千程，此身安可保！
+寒骨枕荒沙，幽魂泣烟草。
+悲损门内妻，望断吾家老。
+安得义男儿，焚此无主尸。
+引其孤魂回，负其白骨归！
+```
+
+## 失题
+### 隋代：杨广
+```
+寒鸦飞数点，流水绕孤村。
+斜阳欲落处，一望黯消魂。
+```
+
+## 杂诗·旧山虽在不关身
+### 唐代：佚名
+```
+旧山虽在不关身，且向长安过暮春。
+一树梨花一溪月，不知今夜属何人？
+```
+
 ## 离思五首·其四
 ### 唐代：元稹
 ```
@@ -15,6 +42,13 @@
 
 井底点灯深烛伊，共郎长行莫围棋。
 玲珑骰子安红豆，入骨相思知不知。
+```
+
+## 瑶瑟怨
+### 唐代：温庭筠
+```
+冰簟银床梦不成，碧天如水夜云轻。
+雁声远过潇湘去，十二楼中月自明。
 ```
 
 ## 商山早行
@@ -33,6 +67,22 @@
 情人怨遥夜，竟夕起相思。
 灭烛怜光满，披衣觉露滋。
 不堪盈手赠，还寝梦佳期。
+```
+
+## 江楼旧感 / 江楼感旧
+### 唐代：赵嘏
+```
+独上江楼思渺然，月光如水水如天。
+同来望月人何处？风景依稀似去年。
+```
+
+## 长安晚秋 / 秋望 / 秋夕
+### 唐代：赵嘏
+```
+云物凄清拂曙流，汉家宫阙动高秋。
+残星几点雁横塞，长笛一声人倚楼。
+紫艳半开篱菊静，红衣落尽渚莲愁。
+鲈鱼正美不归去，空戴南冠学楚囚。
 ```
 
 ## 杳杳寒山道
@@ -193,6 +243,20 @@
 ```
 清明时节雨纷纷，路上行人欲断魂。
 借问酒家何处有，牧童遥指杏花村。
+```
+
+## 南陵道中 / 寄远
+### 唐代：杜牧
+```
+南陵水面漫悠悠，风紧云轻欲变秋。
+正是客心孤迥处，谁家红袖凭江楼？
+```
+
+## 初冬夜饮
+### 唐代：杜牧
+```
+淮阳多病偶求欢，客袖侵霜与烛盘。 
+砌下梨花一堆雪，明年谁此凭阑干。
 ```
 
 ## 秋夕
@@ -363,6 +427,13 @@
 河西幕中多故人，故人别来三五春。
 花门楼前见秋草，岂能贫贱相看老。
 一生大笑能几回，斗酒相逢须醉倒。
+```
+
+## 河湟旧卒
+### 唐代：张乔
+```
+少年随将讨河湟，头白时清返故乡。
+十万汉军零落尽，独吹边曲向残阳。
 ```
 
 ## 凉州词二首
@@ -913,6 +984,15 @@
 妾家高楼连苑起，良人执戟明光里。
 知君用心如日月，事夫誓拟同生死。
 还君明珠双泪垂，恨不相逢未嫁时。
+```
+
+## 秋雨夜眠
+### 唐代：白居易
+```
+凉冷三秋夜，安闲一老翁。
+卧迟灯灭后，睡美雨声中。
+灰宿温瓶火，香添暖被笼。
+晓晴寒未起，霜叶满阶红。
 ```
 
 ## 夜雨
