--- a/poetry/宋词.md
+++ b/poetry/宋词.md
@@ -240,6 +240,15 @@
 两情若是久长时，又岂在朝朝暮暮。
 ```
 
+## 南歌子·香墨弯弯画
+### 宋代：秦观
+```
+香墨弯弯画，燕脂淡淡匀。
+揉蓝衫子杏黄裙，独倚玉阑无语点檀唇。
+人去空流水，花飞半掩门。
+乱山何处觅行云？又是一钩新月照黄昏。
+```
+
 ## 如梦令·春景
 ### 宋代：秦观
 ```
@@ -443,6 +452,46 @@
 人间辛苦是三农。要得一犁水足望年丰。
 ```
 
+## 人月圆·小桃枝上春风早
+### 宋代：李持正
+```
+小桃枝上春风早，初试薄罗衣。
+年年乐事，华灯竞处，人月圆时。 
+禁街箫鼓，寒轻夜永，纤手重携。
+更阑人散，千门笑语，声在帘帏。
+```
+
+## 唐多令·惜别
+### 宋代：吴文英
+```
+何处合成愁。离人心上秋。
+纵芭蕉、不雨也飕飕。
+都道晚凉天气好，有明月、怕登楼。 
+
+年事梦中休。花空烟水流。
+燕辞归、客尚淹留。
+垂柳不萦裙带住。漫长是、系行舟。
+```
+
+## 临江仙·暮春
+### 宋代：赵长卿
+```
+过尽征鸿来尽燕，故园消息茫然。
+一春憔悴有谁怜。怀家寒食夜，中酒落花天。
+见说江头春浪渺，殷勤欲送归船。
+别来此处最萦牵。短篷南浦雨，疏柳断桥烟。
+```
+
+## 对酒
+### 宋代：陆游
+```
+闲愁如飞雪，入酒即消融。
+好花如故人，一笑杯自空。
+流莺有情亦念我，柳边尽日啼春风。
+长安不到十四载，酒徒往往成衰翁。
+九环宝带光照，不如留君双颊红。
+```
+
 ## 卜算子·咏梅
 ### 宋代：陆游
 ```
@@ -498,6 +547,20 @@
 ```
 少年不识愁滋味，爱上层楼。爱上层楼。为赋新词强说愁。 
 而今识尽愁滋味，欲说还休。欲说还休。却道天凉好个秋。
+```
+
+## 念奴娇·梅
+### 宋代：辛弃疾
+```
+疏疏淡淡，问阿谁、堪比天真颜色。
+笑杀东君虚占断，多少朱朱白白。
+雪里温柔，水边明秀，不借春工力。
+骨清香嫩，迥然天与奇绝。 
+
+尝记宝篽寒轻，琐窗人睡起，玉纤轻摘。
+漂泊天涯空瘦损，犹有当年标格。
+万里风烟，一溪霜月，未怕欺他得。
+不如归去，阆苑有个人忆。
 ```
 
 ## 清平乐·村居
