--- a/poetry/宋诗.md
+++ b/poetry/宋诗.md
@@ -86,6 +86,13 @@
 到得还来别无事，庐山烟雨浙江潮。
 ```
 
+## 东栏梨花
+### 宋代：苏轼
+```
+梨花淡白柳深青，柳絮飞时花满城。
+惆怅东栏一株雪，人生看得几清明。
+```
+
 ## 留别妻
 ### 两汉：苏武
 ```
@@ -196,6 +203,16 @@
 楼船夜雪瓜洲渡，铁马秋风大散关。
 塞上长城空自许，镜中衰鬓已先斑。
 出师一表真名世，千载谁堪伯仲间！
+```
+
+## 沈园二首
+### 宋代：陆游
+```
+城上斜阳画角哀，沈园非复旧池台，
+伤心桥下春波绿，曾是惊鸿照影来。
+
+梦断香消四十年，沈园柳老不吹绵。
+此身行作稽山土，犹吊遗踪一泫然。
 ```
 
 ## 临安春雨初霁
