--- a/句子/摘录.md
+++ b/句子/摘录.md
@@ -13,7 +13,7 @@
 小时候不期待结果，小时候哭笑都不打折。  
 —————— 马德《允许自己虚度时光》
 ```
----
+
 ```
 我走过山时，山不说话， 
 我路过海时，海不说话， 
@@ -23,7 +23,7 @@
 像极了十六岁那年的烟花。
 —————— 程灵素《红颜弹指老，刹那芳华》
 ```
----
+
 ```
 长亭外，古道边，芳草碧连天。晚风拂柳笛声残，夕阳山外山。
 天之涯，地之角，知交半零落。一壶浊酒尽余欢，今宵别梦寒。
@@ -31,9 +31,24 @@
 天之涯，地之角，知交半零落。人生难得是欢聚，惟有别离多。
 —————— 李叔同
 ```
----
+
 ```
 那时我们有梦，关于文学，关于爱情，关于穿越世界的旅行。
 如今我们深夜饮酒，杯子碰到一起，都是梦破碎的声音。
 —————— 北岛 《波兰来客》
+```
+
+```
+“因为害怕自己并非明珠而不敢刻苦琢磨，又因为有几分相信自己是明珠，
+而不能与瓦砾碌碌为伍，遂逐渐远离世间，疏避人群，
+结果在内心不断用愤懑和羞怒饲育着自己懦弱的自尊心。
+世上每个人都是驯兽师，而那匹猛兽，就是每人各自的性情。
+对我而言，猛兽就是这自大的羞耻心了。
+老虎正是它。我折损自己，施苦妻儿，伤害朋友。
+末了，我就变成了这副与内心一致的模样。
+如今想起来，我真是空费了自己那一点仅有的才能，
+徒然在口头上卖弄着什么'人生一事不为则太长，欲为一事则太短'的警句，
+可事实是，唯恐暴露才华不足的卑怯的畏惧，和厌恶钻研刻苦的惰怠，就是我的全部了。
+但远比我缺乏才华，可由于专念磨砺而成就堂堂诗家的，也颇不乏其人。”
+—————— 中岛敦《山月记》
 ```
