add day030.html and update some poems

--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -29,3 +29,4 @@
 [Day 027 - 放大镜效果]()  
 [Day 028 - 元素拖动]()  
 [Day 029 - 像素画板](day100/day029.html)  
+[Day 030 - 二，八，十，十六进制的转换](day100/day030.html)  
