--- a/poetry/元词.md
+++ b/poetry/元词.md
@@ -1,14 +1,14 @@
 # 元词
 
-### 琵琶行
-#### 元代：高明
+## 琵琶行
+### 元代：高明
 ```
 我本将心向明月，奈何明月照沟渠。
 落花有意随流水，流水无心恋落花。
 ```
 
-### 折桂令·春情
-#### 元代：徐再思
+## 折桂令·春情
+### 元代：徐再思
 ```
 平生不会相思，才会相思，便害相思。
 身似浮云，心如飞絮，气若游丝。
