--- a/poetry/唐诗.md
+++ b/poetry/唐诗.md
@@ -238,6 +238,13 @@
 寂寞空庭春欲晚，梨花满地不开门。
 ```
 
+## 早梅（一作观梅女仙诗）
+### 唐代：刘元载妻
+```
+南枝向暖北枝寒，一种春风有两般。 
+凭仗高楼莫吹笛，大家留取倚阑干。
+```
+
 ## 清明
 ### 唐代：杜牧
 ```
@@ -799,6 +806,15 @@
 仰天大笑出门去，我辈岂是蓬蒿人。
 ```
 
+## 登金陵凤凰台
+### 唐代：李白
+```
+凤凰台上凤凰游，凤去台空江自流。
+吴宫花草埋幽径，晋代衣冠成古丘。
+三山半落青天外，二水中分白鹭洲。(二水 一作：一水)
+总为浮云能蔽日，长安不见使人愁。
+```
+
 ## 古风·秦王扫六合
 ### 唐代：李白
 ```
@@ -1193,6 +1209,13 @@
 ```
 岐王宅里寻常见，崔九堂前几度闻。 
 正是江南好风景，落花时节又逢君。
+```
+
+## 月夜
+### 唐代：杜甫
+```
+今夜鄜州月，闺中只独看。遥怜小儿女，未解忆长安。
+香雾云鬟湿，清辉玉臂寒。何时倚虚幌，双照泪痕干。
 ```
 
 ## 春望
