--- a/poetry/宋词.md
+++ b/poetry/宋词.md
@@ -191,8 +191,10 @@
 ## 西江月·世事一场大梦
 ### 宋代：苏轼
 ```
-世事一场大梦，人生几度秋凉？夜来风叶已鸣廊。看取眉头鬓上。(秋凉 一作：新凉)
-酒贱常愁客少，月明多被云妨。中秋谁与共孤光。把盏凄然北望。
+世事一场大梦，人生几度秋凉？
+夜来风叶已鸣廊。看取眉头鬓上。(秋凉 一作：新凉)
+酒贱常愁客少，月明多被云妨。
+中秋谁与共孤光。把盏凄然北望。
 ```
 
 ## 浣溪沙·游蕲水清泉寺
@@ -563,6 +565,22 @@
 不如归去，阆苑有个人忆。
 ```
 
+## 摸鱼儿·观潮上叶丞相
+### 宋代：辛弃疾
+```
+望飞来半空鸥鹭，须臾动地鼙鼓。
+截江组练驱山去，鏖战未收貔虎。
+朝又暮。诮惯得、吴儿不怕蛟龙怒。
+风波平步。
+看红旆惊飞，跳鱼直上，蹙踏浪花舞。
+
+凭谁问，万里长鲸吞吐，人间儿戏千弩。
+滔天力倦知何事，白马素车东去。
+堪恨处，人道是、属镂怨愤终千古。
+功名自误。
+谩教得陶朱，五湖西子，一舸弄烟雨。
+```
+
 ## 清平乐·村居
 ### 宋代：辛弃疾
 ```
@@ -679,6 +697,17 @@
 。回首叫、云飞风起。
 不恨古人吾不见，恨古人不见吾狂耳。
 知我者，二三子。
+```
+
+## 河北民
+### 宋代：王安石
+```
+河北民，生近二边长苦辛。
+家家养子学耕织，输与官家事夷狄。
+今年大旱千里赤，州县仍催给河役。
+老小相依来就南，南人丰年自无食。
+悲愁天地白日昏，路旁过者无颜色。
+汝生不及贞观中，斗粟数钱无兵戎！
 ```
 
 ## 满江红·写怀
