--- a/poetry/宋诗.md
+++ b/poetry/宋诗.md
@@ -129,6 +129,22 @@
 遥知不是雪，为有暗香来。
 ```
 
+## 凤凰山
+### 宋代：王安石
+```
+欢乐欲与少年期，人生百年常苦迟。
+白头富贵何所用，气力但为忧勤衰。
+愿为五陵轻薄儿，生在贞观开元时。
+斗鸡走犬过一生，天地安危两不知。
+```
+
+## 入塞
+### 宋代：王安石
+```
+荒云凉雨水悠悠，鞍马东西鼓次休。
+尚有燕人数行泪，回身却望塞南流！
+```
+
 ## 断句
 ### 宋代：苏麟
 ```
