--- a/poetry/清诗.md
+++ b/poetry/清诗.md
@@ -149,6 +149,34 @@
 江山代有才人出，各领风骚数百年。
 ```
 
+## 别老母
+### 清代：黄景仁
+```
+搴帷拜母河梁去，白发愁看泪眼枯。
+惨惨柴门风雪夜，此时有子不如无。
+```
+
+## 别内
+### 清代：黄景仁
+```
+几回契阔喜生还。人老凄风苦雨间。
+今夜别君无一语，但看堂上有衰颜。
+```
+
+## 幼女
+### 清代：黄景仁
+```
+汝父年来实尟欢。牵衣故作别离难。
+此行不是长安客，莫向浮云直北看。
+```
+
+## 老仆
+### 清代：黄景仁
+```
+飘零应识主人心。仗尔锄园守故林。
+数载相随今舍去，江湖从此断乡音。
+```
+
 ## 圆圆曲
 ### 清代：吴伟业
 ```
