--- a/句子/摘录.md
+++ b/句子/摘录.md
@@ -52,3 +52,35 @@
 但远比我缺乏才华，可由于专念磨砺而成就堂堂诗家的，也颇不乏其人。”
 —————— 中岛敦《山月记》
 ```
+
+```
+《琵琶语·掉线的珠儿》
+词:天姥遗珠 曲：林海 唱：唐家大小姐
+
+夜无眠，是谁将琵琶轻轻弹，声声拨乱我心弦，你可也听见？
+你曾说我是，你前世离散的红颜，相约这一世相见 再续前缘。
+前生我 曾踏上你的船舷，沦落尘世间，同病相怜泪湿了青衫。
+可是那根红线，另一端 攥在别人手里边。
+我恨生前未积缘 古佛青灯度流年。
+
+今生我 又走过你的跟前，你却记不起昨天 逝水的容颜。
+其实我，不求你太多的爱怜，只要多留意一眼。我也就无憾。
+
+来生我 还会是你的红颜，不管缘深浅，一定会来与你再相见。
+佛说这份情感 转姻缘，需要几千年修练。
+我等不到那一天，依然会与你擦肩。 
+
+夜阑珊，谁在将琵琶轻轻弹，万千心语在指尖，你已听不见。
+惟愿这清弦，似月色泠泠水涓涓，
+穿越人海的荒烟，流入你心田；
+穿过浮华的尘， 流过你心间。
+```
+
+```
+酒入豪肠 
+七分酿成了月光 
+还有三分啸成剑气 
+秀口一吐 
+就是半个盛唐
+—————— 余光中《寻李白》
+```
