--- a/poetry/明诗.md
+++ b/poetry/明诗.md
@@ -54,3 +54,12 @@
 汉江明月照归人，万里秋风一叶身。
 休把客衣轻浣濯，此中犹有帝京尘。
 ```
+
+## 别云间
+### 明代：夏完淳
+```
+三年羁旅客，今日又南冠。
+无限山河泪，谁言天地宽！(山河 一作：河山)
+已知泉路近，欲别故乡难。
+毅魄归来日，灵旗空际看。
+```
