--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -31,3 +31,4 @@
 [Day 029 - 像素画板](day100/day029.html)  
 [Day 030 - 二，八，十，十六进制的转换](day100/day030.html)  
 [Day 031 - 富文本编辑器 version 0.1](day100/day031.html)  
+[Day 032 - 日历](day100/day032.html)  
