--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -19,7 +19,7 @@
 [Day 017 - 网页版天气预报](day100/day017.html)  
 [Day 018 - 手机旋转属性](day100/day018.html)  
 [Day 019 - 手风琴效果菜单](day100/day019.html)  
-[Day 020 - Todo]()  
+[Day 020 - Todo](day100/day020.html)  
 [Day 021 - 网页版微信]()  
 [Day 022 - 弹幕]()  
 [Day 023 - 苹果电脑外观效果图](day100/day023.html)  
@@ -32,3 +32,4 @@
 [Day 030 - 二，八，十，十六进制的转换](day100/day030.html)  
 [Day 031 - 富文本编辑器 version 0.1](day100/day031.html)  
 [Day 032 - 日历](day100/day032.html)  
+[Day 033 - 搜索提示](day100/day033.html)  
