add a article about poem

--- a/句子/摘录.md
+++ b/句子/摘录.md
@@ -84,3 +84,21 @@
 就是半个盛唐
 —————— 余光中《寻李白》
 ```
+
+```
+借我一个暮年
+借我碎片
+借我瞻前与顾后
+借我执拗如少年
+借我后天长成的先天
+借我变如不曾改变
+借我素淡的世故和明白的愚
+借我可预知的脸
+借我悲怆的磊落
+借我温软的鲁莽和玩笑的庄严
+借我最初与最终的不敢
+借我不言而喻的不见
+借我一场秋啊
+可你说这已是冬天
+—————— 樊小纯，《借我》。
+```
