--- a/poetry/唐诗.md
+++ b/poetry/唐诗.md
@@ -1187,6 +1187,16 @@
 座中泣下谁最多？江州司马青衫湿。
 ```
 
+## 雨晴
+### 唐代：王驾
+```
+雨前初见花间蕊，雨后兼无叶里花。
+蛱蝶飞来过墙去，却疑春色在邻家。(版本一)
+
+雨前初见花间蕊，雨后全无叶底花。
+蜂蝶纷纷过墙去，却疑春色在邻家。(版本二)
+```
+
 ## 赠卫八处士
 ### 唐代：杜甫
 ```
