--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -1,35 +1,36 @@
 ## 100天100个项目
 
-[Day 001 - 注册页面](day100/day001.html)  
-[Day 002 - 轮播图](day100/day002.html)  
-[Day 003 - 下拉菜单](day100/day003.html)  
-[Day 004 - 响应式下拉菜单](day100/day004.html)  
-[Day 005 - mask 遮罩层](day100/day005.html)  
-[Day 006 - background各项属性](day100/day006.html)  
-[Day 007 - 旋转相册](day100/day007.html)  
-[Day 008 - Windows7 桌面](day100/day008.html)  
-[Day 009 - 元素拖动](day100/day009.html)  
-[Day 010 - js实现网页版计算器](day100/day010.html)  
-[Day 011 - 单词查询](day100/day011.html)  
-[Day 012 - :nth Tester](day100/day012.html)  
-[Day 013 - 使用Grid实现各种布局](day100/day013.html)  
-[Day 014 - 化学元素周期表](day100/day014.html)  
-[Day 015 - 中国历史年代表](day100/day015.html)  
-[Day 016 - 下雨动画](day100/day016.html)  
-[Day 017 - 网页版天气预报](day100/day017.html)  
-[Day 018 - 手机旋转属性](day100/day018.html)  
-[Day 019 - 手风琴效果菜单](day100/day019.html)  
-[Day 020 - Todo](day100/day020.html)  
+[Day 001 - 注册页面](day001.html)  
+[Day 002 - 轮播图](day002.html)  
+[Day 003 - 下拉菜单](day003.html)  
+[Day 004 - 响应式下拉菜单](day004.html)  
+[Day 005 - mask 遮罩层](day005.html)  
+[Day 006 - background各项属性](day006.html)  
+[Day 007 - 旋转相册](day007.html)  
+[Day 008 - Windows7 桌面](day008.html)  
+[Day 009 - 元素拖动](day009.html)  
+[Day 010 - js实现网页版计算器](day010.html)  
+[Day 011 - 单词查询](day011.html)  
+[Day 012 - :nth Tester](day012.html)  
+[Day 013 - 所有单位的转换](day013.html)  
+[Day 014 - 化学元素周期表](day014.html)  
+[Day 015 - 中国历史年代表](day015.html)  
+[Day 016 - 下雨动画](day016.html)  
+[Day 017 - 网页版天气预报](day017.html)  
+[Day 018 - 手机旋转属性](day018.html)  
+[Day 019 - 手风琴效果菜单](day019.html)  
+[Day 020 - Todo](day020.html)  
 [Day 021 - 网页版微信]()  
 [Day 022 - 弹幕]()  
-[Day 023 - 苹果电脑外观效果图](day100/day023.html)  
+[Day 023 - 苹果电脑外观效果图](day023.html)  
 [Day 024 - Max OS X 的 Dock效果]()  
 [Day 025 - 模拟书本的翻页效果]()  
-[Day 026 - Fancy watch](day100/day026.html)  
+[Day 026 - Fancy watch](day026.html)  
 [Day 027 - 放大镜效果]()  
 [Day 028 - 元素拖动]()  
-[Day 029 - 像素画板](day100/day029.html)  
-[Day 030 - 二，八，十，十六进制的转换](day100/day030.html)  
-[Day 031 - 富文本编辑器 version 0.1](day100/day031.html)  
-[Day 032 - 日历](day100/day032.html)  
-[Day 033 - 搜索提示](day100/day033.html)  
+[Day 029 - 像素画板](day029.html)  
+[Day 030 - 二，八，十，十六进制的转换](day030.html)  
+[Day 031 - 富文本编辑器 version 0.1](day031.html)  
+[Day 032 - 日历](day032.html)  
+[Day 033 - 搜索提示](day033.html)  
+[Day 034 - 模仿知乎点赞动画](day034.html)  
