--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -34,3 +34,4 @@
 [Day 032 - 日历](day032.html)  
 [Day 033 - 搜索提示](day033.html)  
 [Day 034 - 模仿知乎点赞动画](day034.html)  
+[Day 035 - 各种物理量的计算](day035.htmls)  
