--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -34,4 +34,5 @@
 [Day 032 - 日历](day032.html)  
 [Day 033 - 搜索提示](day033.html)  
 [Day 034 - 模仿知乎点赞动画](day034.html)  
-[Day 035 - 各种物理量的计算](day035.htmls)  
+[Day 035 - 各种物理量的计算](day035.html)  
+[Day 036 - 摩尔斯码转化](day036.html)  
