add day100 and lianliankan

--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -36,3 +36,4 @@
 [Day 034 - 模仿知乎点赞动画](day034.html)  
 [Day 035 - 各种物理量的计算](day035.html)  
 [Day 036 - 摩尔斯码转化](day036.html)  
+[Day 037 - 粒子效果](day037.html)  
