--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -37,3 +37,4 @@
 [Day 035 - 各种物理量的计算](day035.html)  
 [Day 036 - 摩尔斯码转化](day036.html)  
 [Day 037 - 粒子效果](day037.html)  
+[Day 038 - 闹钟，倒计时，秒表]()  
