--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -38,3 +38,4 @@
 [Day 036 - 摩尔斯码转化](day036.html)  
 [Day 037 - 粒子效果](day037.html)  
 [Day 038 - 闹钟，倒计时，秒表]()  
+[Day 039 - CSS实现各种形状](day039.html)  
