--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -40,3 +40,4 @@
 [Day 038 - 闹钟，倒计时，秒表]()  
 [Day 039 - CSS实现各种形状](day039.html)  
 [Day 040 - 杨辉三角](day040.html)  
+[Day 041 - 页面浏览进度条](day041.html)  
