--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -44,3 +44,4 @@
 [Day 042 - 音乐播放器](day042.html)  
 [Day 043 - 获取按键的keyCode](day043.html)  
 [Day 044 - 显示二维码](day044.html)  
+[Day 045 - 电商网放大镜效果](day045.html)  
