--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -45,3 +45,4 @@
 [Day 043 - 获取按键的keyCode](day043.html)  
 [Day 044 - 显示二维码](day044.html)  
 [Day 045 - 电商网放大镜效果](day045.html)  
+[Day 046 - 人生进度条](day046.html)  
