--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -46,3 +46,4 @@
 [Day 044 - 显示二维码](day044.html)  
 [Day 045 - 电商网放大镜效果](day045.html)  
 [Day 046 - 人生进度条](day046.html)  
+[Day 047 - 段子集](day047.html)  
