--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -47,3 +47,4 @@
 [Day 045 - 电商网放大镜效果](day045.html)  
 [Day 046 - 人生进度条](day046.html)  
 [Day 047 - 段子集](day047.html)  
+[Day 048 - 用CSS实现26个字母](day048.html)  
