--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -48,3 +48,4 @@
 [Day 046 - 人生进度条](day046.html)  
 [Day 047 - 段子集](day047.html)  
 [Day 048 - 用CSS实现26个字母](day048.html)  
+[Day 049 - 判断两个子网是否位于同一个网络](day049.html)  
