--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -51,3 +51,4 @@
 [Day 049 - 判断两个子网是否位于同一个网络](day049.html)  
 [Day 050 - gank.io](day050.html)  
 [Day 051 - transform: 3D](day051.html)  
+[Day 052 - transform：3D魔方](day052.html)  
