--- a/post/进制转换.md
+++ b/post/进制转换.md
@@ -51,30 +51,73 @@
 => 32 + 8 * 4 + 1  
 => 45
 
-**结果：** 
+**结果：** (101101)<sub>2</sub> => ( 45 )<sub>10</sub>
 
 **例子2：** (110011011)<sub>2</sub> => ( ? )<sub>10</sub>
-```
+> (110011011)<sub>2</sub>  
+=> 1 * 2<sup>8</sup> + 1 * 2<sup>7</sup> + 0 * 2<sup>6</sup> + 0 * 2<sup>5</sup> + 1 * 2<sup>4</sup> + 1 * 2<sup>3</sup> + 0 * 2<sup>2</sup> + 1 * 2<sup>1</sup> + 1 * 2<sup>0</sup>  
+=> 256 + 128 + 16 + 8 + 2 + 1  
+=> 411
 
-```
-**结果：** 
+**结果：** (110011011)<sub>2</sub> => ( 411 )<sub>10</sub>
 
 **代码实现：** 
 ```javascript
+  let binary = '101101';
+  let num = window.parseInt(binary,2);
+  console.log(num);     // 45
 
+  let binary = '110011011';
+  let num = window.parseInt(binary,2);
+  console.log(num);     // 411
 ```
 
-## 十进制 -> 十六进制
-
-
 ## 二进制 -> 十六进制
+> 十六进制数字中超过10的数字用字母 `A-F` 代替，即 `10,11,12,13,14,15` 用 `A,B,C,D,E,F` 代替。
 
+**十六进制和二进制的对照表：**  
+||||||||||||||||||
+| - | - | - | - | - | - | - | - | - | - | - | - | - | - | - | - | - |
+| 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 | 11 | 12 | 13 | 14 | 15 |
+| 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | A | B | C | D | E | F |
+|0000|0001|0010|0011|0100|0101|0110|0111|1000|1001|1010|1011|1100|1101|1110|1111|
+
+**方法：** 二进制转换为十六进制的方法是 `取四合一法`; 即从二进制数的最后一位开始向前取，每四位为一组。如，`110011101001` 取成这种形式的 `1100 1110 1001`。然后按照上面的对照表，按照二进制的按权相加法得到一个十六进制的数字。`1100` 就是 `C`，`1110` 就是 `E`，`1001` 就是 `9`，按顺序写下。即 `CE9`。
+
+**代码实现：**
+```javascript
+  // 需要先把二进制数字转换为十进制数字，在把十进制数字转换为十六进制
+  let bin = '110011101001';
+  let oct = window.parseInt(bin, 2);
+  let hex = oct.toString(16);
+  console.log(hex);     // CE9
+```
 
 ## 十六进制 -> 二进制
+> 十六进制转换为二进制：和上面的反过来，就是一分四。1个十六进制数字分成4个二进制数字。比如 `DF7C`，还是按照上表来。`D` 就是 `1101`，`F` 就是 `1111`，`7` 就是 `0111`，`C` 就是 `1100`。(DF7C)10 = (1101 1111 0111 1100)2
+
+> 代码实现：先用 parseInt() 转换为十进制，再用 toString() 转换为二进制。
+
+## 十进制 -> 十六进制
+> 十进制转换为十六进制：需要先把十进制转换为二进制，在用上面的方法把二进制转化为十六进制。
+
+> 但是代码实现更简单。用 `toString()` 方法。
 
 
-## 十六进制 -> 十进制
+## 十进制小数 -> 二进制小数
+**方法：** 小数部分乘以2，取整数依次放到小数点后，知道小数点后为0。  
+**例子：**  (0.125)<sub>10</sub>  => ( ? )<sub>2</sub>
+```
+0.125 * 2 = 0.25 ... 0  
+0.25  * 2 = 0.5  ... 0  
+0.5   * 2 = 1    ... 1
+```
+**结果：** (0.125)<sub>10</sub>  => ( 0.001 )<sub>2</sub>
 
-
-## 十进制小数 -> 二进制
-
+## 二进制小数  -> 十进制小数
+二进制小数到十进制小数的转换与二进制到十进制的转换是一样的道理。也是使用 `按权相加法` ，不过，指数部分是负数。
+**例子：** (0.11011)<sub>2</sub>  => ( ? )<sub>10</sub>
+> (0.11011)<sub>2</sub>  
+=> 1 * 2<sup>-1</sup> + 1 * 2<sup>-2</sup> + 0 * 2<sup>-3</sup> + 1 * 2<sup>-4</sup> + 1 * 2<sup>-5</sup>  
+=> 0.5 + 0.25 + 0.0625 + 0.03125
+=> 0.84375
