--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -52,3 +52,4 @@
 [Day 050 - gank.io](day050.html)  
 [Day 051 - transform: 3D](day051.html)  
 [Day 052 - transform：3D魔方](day052.html)  
+[Day 053 - 钟表](day053.html)  
