--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -54,4 +54,5 @@
 [Day 052 - transform：3D魔方](day052.html)  
 [Day 053 - 钟表](day053.html)  
 [Day 054 - 地图](day054.html)  
-[Day 053 - 输入框的历史记录](day055.html)  
+[Day 055 - 输入框的历史记录](day055.html)  
+[Day 056 - 懒加载](day056.html)  
