--- a/poetry/现代诗.md
+++ b/poetry/现代诗.md
@@ -1,5 +1,18 @@
 # 现代诗
 
+## Table of Contents
+
+- [海子 - 面朝大海，春暖花开](#面朝大海，春暖花开)
+- [扎西拉姆·多多 - 班扎古鲁白玛的沉默](#班扎古鲁白玛的沉默)
+- [戴望舒 - 雨巷](#雨巷)
+- [西贝 - 路人](#路人)
+- [西贝 - 直到这个世界禁止爱你](#直到这个世界禁止爱你)
+- [陈毅 - 梅岭三章](#梅岭三章)
+- [毛泽东 - 七绝·改西乡隆盛诗赠父亲](#七绝·改西乡隆盛诗赠父亲)
+- [余光中 - 寻李白](#寻李白)
+- [余光中 - 绝色](#绝色)
+- [马东 - 无题](#无题)
+
 ## 面朝大海，春暖花开
 ### 海子
 ```
@@ -158,4 +171,107 @@
 ```
 孩儿立志出乡关，学不成名誓不还。
 埋骨何须桑梓地，人生无处不青山。
+```
+
+## 寻李白
+### 余光中
+
+——痛饮狂歌空度日，飞扬跋扈为谁雄
+```
+那一双傲慢的靴子至今还落在
+高力士羞愤的手里，人却不见了
+把满地的难民和伤兵
+把胡马和羌笛交践的节奏
+留给杜二去细细的苦吟
+自从那年贺知章眼花了
+认你做谪仙，便更加佯狂
+用一只中了魔咒的小酒壶
+把自己藏起来，连太太也寻不到你
+　
+怨长安城小而壶中天长
+在所有的诗里你都预言
+会突然水遁，或许就在明天
+只扁舟破浪，乱发当风
+树敌如林，世人皆欲杀
+肝硬化怎杀得死你？
+酒放豪肠，七分酿成了月光
+余下的三分啸成剑气
+口一吐就半个盛唐
+从一元到天宝，从洛阳到咸阳
+冠盖满途车骑的嚣闹
+不及千年后你的一首
+水晶绝句轻叩我额头
+当地一弹挑起的回音
+　
+一贬世上已经够落魄
+再放夜郎母乃太难堪
+至今成谜是你的籍贯
+陇西或山东，青莲乡或碎叶城
+不如归去归哪个故乡？
+凡你醉处，你说过，皆非他乡
+失踪，是天才唯一的下场
+身后事，究竟你遁向何处？
+狼啼不住，杜二也苦劝你不住
+一回头四窗下竟已白头
+七仙，五友，都救不了你了
+匡山给雾锁了，无路可入
+仍炉火示纯青，就半粒丹砂
+怎追蹑葛洪袖里的流霞？
+　
+樽中月影，或许那才你故乡
+常得你一生痴痴地仰望？
+而无论出门向西哭，向东哭
+长安却早已陷落
+二十四万里的归程
+也不必惊动大鹏了，也无须招鹤
+只消把酒杯向半空一扔
+便旋成一只霍霍的飞碟
+诡缘的闪光愈转愈快
+接你回传说里去
+```
+
+## 绝色
+### 余光中
+```
+美丽而善变的巫娘，那月亮 
+翻译是她的特长 
+却把世界译走了样 
+把太阳的镕金译成了流银 
+把烈火译成了冰 
+而且带点薄荷的风味 
+凡尝过的人都说 
+译文是全不可靠 
+但比起原文来呢 
+却更加神秘，更加美 
+
+雪是另一位唯美的译者 
+存心把世界译错 
+或者译对，诗人说 
+只因原文本来就多误 
+所以每当雪姑 
+乘着六瓣的降落伞 
+在风里飞旋地降临 
+这世界一夜之间 
+比革命更彻底 
+竟变得如此白净 
+
+若逢新雪初霁，满月当空 
+下面平铺着皓影 
+上面流转着亮银 
+而你带笑地向我步来 
+月色与雪色之间 
+你是第三种绝色 
+不知月色加反光的雪色 
+该如何将你的本色 
+——已经够出色的了 
+全译成更绝的艳色？
+```
+
+## 无题
+### 作者：马东
+```
+伤情最是晚凉天，憔悴斯人不堪怜。
+邀酒摧肠三杯醉，寻香惊梦五更寒。
+钗头凤斜卿有泪，荼蘼花了我无缘。
+小楼寂寞新雨月，也难如钩也难圆。
 ```
