--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -26,7 +26,7 @@
 [Day 024 - Max OS X 的 Dock效果]()  
 [Day 025 - 模拟书本的翻页效果]()  
 [Day 026 - Fancy watch](day026.html)  
-[Day 027 - 放大镜效果]()  
+[Day 027 - 放大镜效果](day027.html)  
 [Day 028 - 元素拖动]()  
 [Day 029 - 像素画板](day029.html)  
 [Day 030 - 二，八，十，十六进制的转换](day030.html)  
