--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -21,7 +21,7 @@
 [Day 019 - 手风琴效果菜单](day019.html)  
 [Day 020 - Todo](day020.html)  
 [Day 021 - 网页版微信]()  
-[Day 022 - 弹幕]()  
+[Day 022 - 弹幕](day022.html)  
 [Day 023 - 苹果电脑外观效果图](day023.html)  
 [Day 024 - Max OS X 的 Dock效果]()  
 [Day 025 - 模拟书本的翻页效果]()  
