--- a/poetry/唐诗.md
+++ b/poetry/唐诗.md
@@ -27,13 +27,6 @@
 一树梨花一溪月，不知今夜属何人？
 ```
 
-## 离思五首·其四
-### 唐代：元稹
-```
-曾经沧海难为水，除却巫山不是云。
-取次花丛懒回顾，半缘修道半缘君。
-```
-
 ## 南歌子词二首 / 新添声杨柳枝词
 ### 唐代：温庭筠
 ```
@@ -418,6 +411,24 @@
 山回路转不见君，雪上空留马行处。
 ```
 
+## 碛中作
+### 唐代：岑参
+```
+走马西来欲到天，辞家见月两回圆。
+今夜不知何处宿，平沙万里绝人烟。
+```
+
+## 走马川行奉送出师西征 / 走马川行奉送封大夫出师西征
+### 唐代：岑参
+```
+君不见走马川行雪海边，平沙莽莽黄入天。 
+轮台九月风夜吼，一川碎石大如斗，随风满地石乱走。 
+匈奴草黄马正肥，金山西见烟尘飞，汉家大将西出师。 
+将军金甲夜不脱，半夜军行戈相拨，风头如刀面如割。 
+马毛带雪汗气蒸，五花连钱旋作冰，幕中草檄砚水凝。 
+虏骑闻之应胆慑，料知短兵不敢接，车师西门伫献捷。
+```
+
 ## 逢入京使
 ### 唐代：岑参
 ```
@@ -443,6 +454,23 @@
 十万汉军零落尽，独吹边曲向残阳。
 ```
 
+##登鹳雀楼
+### 唐代：王之涣
+```
+白日依山尽，黄河入海流。
+欲穷千里目，更上一层楼。
+```
+
+## 凉州词二首
+### 唐代：王之涣
+```
+黄河远上白云间，一片孤城万仞山。
+羌笛何须怨杨柳，春风不度玉门关。
+
+单于北望拂云堆，杀马登坛祭几回。
+汉家天子今神武，不肯和亲归去来。
+```
+
 ## 凉州词二首
 ### 唐代：王翰
 ```
@@ -458,6 +486,14 @@
 ```
 昔日龌龊不足夸，今朝放荡思无涯。 
 春风得意马蹄疾，一日看尽长安花。
+```
+
+## 游子吟
+### 唐代：孟郊
+```
+慈母手中线，游子身上衣。
+临行密密缝，意恐迟迟归。
+谁言寸草心，报得三春晖。
 ```
 
 ## 闺怨
@@ -544,6 +580,13 @@
 劝君更尽一杯酒，西出阳关无故人。
 ```
 
+## 鹿柴
+### 唐代：王维
+```
+空山不见人，但闻人语响。
+返景入深林，复照青苔上。
+```
+
 ## 竹里馆
 ### 唐代：王维
 ```
@@ -579,6 +622,13 @@
 兴来每独往，胜事空自知。
 行到水穷处，坐看云起时。
 偶然值林叟，谈笑无还期。
+```
+
+## 于易水送人 / 于易水送别
+### 唐代：骆宾王
+```
+此地别燕丹，壮士发冲冠。
+昔时人已没，今日水犹寒。
 ```
 
 ## 代悲白头翁
@@ -695,6 +745,70 @@
 不知细叶谁裁出，二月春风似剪刀。
 ```
 
+## 逢雪宿芙蓉山主人
+### 唐代：刘长卿
+```
+日暮苍山远，天寒白屋贫。
+柴门闻犬吠，风雪夜归人。
+```
+
+## 题破山寺后禅院
+### 唐代：常建
+```
+清晨入古寺，初日照高林。
+竹径通幽处，禅房花木深。
+山光悦鸟性，潭影空人心。
+万籁此都寂，但余钟磬音。(版本一)
+
+清晨入古寺，初日照高林。
+曲径通幽处，禅房花木深。
+山光悦鸟性，潭影空人心。
+万籁此俱寂，惟余钟磬音。(版本二)
+
+清晨入古寺，初日照高林。
+竹径通幽处，禅房花木深。
+山光悦鸟性，潭影空人心。
+万籁此俱寂，但余钟磬音。(版本三)
+
+清晨入古寺，初日照高林。
+曲径通幽处，禅房花木深。
+山光悦鸟性，潭影空人心。
+万籁此俱寂，但余钟磬音。(版本四)
+```
+
+## 灵隐寺
+### 唐代：宋之问
+```
+鹫岭郁岧峣，龙宫锁寂寥。
+楼观沧海日，门对浙江潮。
+桂子月中落，天香云外飘。
+扪萝登塔远，刳木取泉遥。
+霜薄花更发，冰轻叶未凋。
+夙龄尚遐异，搜对涤烦嚣。
+待入天台路，看余度石桥。
+```
+
+## 渡汉江
+### 唐代：宋之问
+```
+岭外音书断，经冬复历春。
+近乡情更怯，不敢问来人。
+```
+
+## 山中留客
+### 唐代：张旭
+```
+山光物态弄春晖，莫为轻阴便拟归。
+纵使晴明无雨色，入云深处亦沾衣。
+```
+
+## 桃花溪
+### 唐代：张旭
+```
+隐隐飞桥隔野烟，石矶西畔问渔船。 
+桃花尽日随流水，洞在清溪何处边。
+```
+
 ## 陇西行四首
 ### 唐代：陈陶
 ```
@@ -709,6 +823,13 @@
 
 黠虏生擒未有涯，黑山营阵识龙蛇。
 自从贵主和亲后，一半胡风似汉家。
+```
+
+## 春晓
+### 唐代：孟浩然
+```
+春眠不觉晓，处处闻啼鸟。
+夜来风雨声，花落知多少。
 ```
 
 ## 宿建德江
@@ -727,6 +848,51 @@
 待到重阳日，还来就菊花。
 ```
 
+## 菊花
+### 唐代：元稹
+```
+秋丛绕舍似陶家，遍绕篱边日渐斜。 
+不是花中偏爱菊，此花开尽更无花。
+```
+
+## 离思五首
+### 唐代：元稹
+```
+自爱残妆晓镜中，环钗漫篸绿丝丛。
+须臾日射胭脂颊，一朵红苏旋欲融。
+
+山泉散漫绕阶流，万树桃花映小楼。
+闲读道书慵未起，水晶帘下看梳头。
+
+红罗著压逐时新，吉了花纱嫩麴尘。
+第一莫嫌材地弱，些些纰缦最宜人。
+
+曾经沧海难为水，除却巫山不是云。
+取次花丛懒回顾，半缘修道半缘君。
+
+寻常百种花齐发，偏摘梨花与白人。
+今日江头两三树，可怜和叶度残春。
+```
+
+## 遣悲怀三首
+### 唐代：元稹
+```
+谢公最小偏怜女，自嫁黔娄百事乖。
+顾我无衣搜荩箧，泥他沽酒拔金钗。(荩箧 一作：画箧)
+野蔬充膳甘长藿，落叶添薪仰古槐。
+今日俸钱过十万，与君营奠复营斋。
+
+昔日戏言身后意，今朝都到眼前来。(身后意 一作：身后事)
+衣裳已施行看尽，针线犹存未忍开。
+尚想旧情怜婢仆，也曾因梦送钱财。
+诚知此恨人人有，贫贱夫妻百事哀。
+
+闲坐悲君亦自悲，百年都是几多时。
+邓攸无子寻知命，潘岳悼亡犹费词。
+同穴窅冥何所望，他生缘会更难期。
+惟将终夜常开眼，报答平生未展眉。
+```
+
 ## 登幽州台歌
 ### 唐代：陈子昂
 ```
@@ -741,18 +907,72 @@
 黄鹤楼中吹玉笛，江城五月落梅花。
 ```
 
-## 苏台览古
-### 唐代：李白
-```
-旧苑荒台杨柳新，菱歌清唱不胜春。 
-只今惟有西江月，曾照吴王宫里人。
-```
-
 ## 春夜洛城闻笛 / 春夜洛阳城闻笛
 ### 唐代：李白
 ```
 谁家玉笛暗飞声，散入春风满洛城。 
 此夜曲中闻折柳，何人不起故园情。
+```
+
+## 峨眉山月歌
+### 唐代：李白
+```
+峨眉山月半轮秋，影入平羌江水流。 
+夜发清溪向三峡，思君不见下渝州。
+```
+
+## 上李邕
+### 唐代：李白
+```
+大鹏一日同风起，扶摇直上九万里。
+假令风歇时下来，犹能簸却沧溟水。
+世人见我恒殊调，闻余大言皆冷笑。
+宣父犹能畏后生，丈夫未可轻年少。
+```
+
+## 塞下曲六首·其一
+### 唐代：李白
+```
+五月天山雪，无花只有寒。
+笛中闻折柳，春色未曾看。
+晓战随金鼓，宵眠抱玉鞍。
+愿将腰下剑，直为斩楼兰。
+```
+
+## 早发白帝城 / 白帝下江陵
+### 唐代：李白
+```
+朝辞白帝彩云间，千里江陵一日还。
+两岸猿声啼不住，轻舟已过万重山。
+```
+
+## 行路难
+### 唐代：李白
+```
+金樽清酒斗十千，玉盘珍羞直万钱。(羞 通：馐；直 通：值)
+停杯投箸不能食，拔剑四顾心茫然。
+欲渡黄河冰塞川，将登太行雪满山。(雪满山 一作：雪暗天)
+闲来垂钓碧溪上，忽复乘舟梦日边。(碧 一作：坐)
+行路难！行路难！多歧路，今安在？
+长风破浪会有时，直挂云帆济沧海。
+
+大道如青天，我独不得出。 
+羞逐长安社中儿，赤鸡白雉赌梨栗。
+弹剑作歌奏苦声，曳裾王门不称情。
+淮阴市井笑韩信，汉朝公卿忌贾生。
+君不见昔时燕家重郭隗，拥篲折节无嫌猜。
+剧辛乐毅感恩分，输肝剖胆效英才。
+昭王白骨萦蔓草，谁人更扫黄金台？
+行路难，归去来！
+
+有耳莫洗颍川水，有口莫食首阳蕨。
+含光混世贵无名，何用孤高比云月？
+吾观自古贤达人，功成不退皆殒身。
+子胥既弃吴江上，屈原终投湘水滨。
+陆机雄才岂自保？李斯税驾苦不早。
+华亭鹤唳讵可闻？上蔡苍鹰何足道？
+君不见吴中张翰称达生，秋风忽忆江东行。
+且乐生前一杯酒，何须身后千载名？
 ```
 
 ## 宣州谢脁楼饯别校书叔云
@@ -765,6 +985,13 @@
 俱怀逸兴壮思飞，欲上青天览明月。(览 通：揽；明月 一作：日月)
 抽刀断水水更流，举杯销愁愁更愁。(销愁 一作 消愁)
 人生在世不称意，明朝散发弄扁舟。
+```
+
+## 独坐敬亭山
+### 唐代：李白
+```
+众鸟高飞尽，孤云独去闲。
+相看两不厌，只有敬亭山。(只有 一作：惟 / 唯)
 ```
 
 ## 长干行·其一
@@ -793,6 +1020,13 @@
 长安一片月，万户捣衣声。
 秋风吹不尽，总是玉关情。
 何日平胡虏，良人罢远征。
+```
+
+## 从军行·其二
+### 唐代：李白
+```
+百战沙场碎铁衣，城南已合数重围。 
+突营射杀呼延将，独领残兵千骑归。
 ```
 
 ## 南陵别儿童入京
@@ -837,23 +1071,6 @@
 ```
 十步杀一人，千里不留行。
 事了拂衣去，深藏身与名。
-```
-
-## 将进酒
-### 唐代：李白
-```
-君不见，黄河之水天上来，奔流到海不复回。
-君不见，高堂明镜悲白发，朝如青丝暮成雪。
-人生得意须尽欢，莫使金樽空对月。
-天生我材必有用，千金散尽还复来。
-烹羊宰牛且为乐，会须一饮三百杯。
-岑夫子，丹丘生，将进酒，杯莫停。
-与君歌一曲，请君为我倾耳听。(倾耳听 一作：侧耳听)
-钟鼓馔玉不足贵，但愿长醉不复醒。(不足贵 一作：何足贵；不复醒 一作：不愿醒/不用醒)
-古来圣贤皆寂寞，惟有饮者留其名。(古来 一作：自古；惟 通：唯)
-陈王昔时宴平乐，斗酒十千恣欢谑。
-主人何为言少钱，径须沽取对君酌。
-五花马，千金裘，呼儿将出换美酒，与尔同销万古愁。
 ```
 
 ## 黄鹤楼送孟浩然之广陵
@@ -936,7 +1153,65 @@
 我寄愁心与明月，随风直到夜郎西。(随风 一作：随君)
 ```
 
-## 月下独酌四首·其一
+## 客中行 / 客中作
+### 唐代：李白
+```
+兰陵美酒郁金香，玉碗盛来琥珀光。 
+但使主人能醉客，不知何处是他乡。
+```
+
+## 山中问答 / 山中答俗人问
+### 唐代：李白
+```
+问余何意栖碧山，笑而不答心自闲。
+桃花流水窅然去，别有天地非人间。
+```
+
+## 怨情
+### 唐代：李白
+```
+美人卷珠帘，深坐颦蛾眉。(颦 一作：蹙)
+但见泪痕湿，不知心恨谁。
+```
+
+## 秋登宣城谢脁北楼
+### 唐代：李白
+```
+江城如画里，山晚望晴空。(山晚 一作：晓)
+两水夹明镜，双桥落彩虹。
+人烟寒橘柚，秋色老梧桐。
+谁念北楼上，临风怀谢公。
+```
+
+## 赠孟浩然
+### 唐代：李白
+```
+吾爱孟夫子，风流天下闻。
+红颜弃轩冕，白首卧松云。 
+醉月频中圣，迷花不事君。
+高山安可仰，徒此揖清芬。
+```
+
+## 金陵酒肆留别
+### 唐代：李白
+```
+风吹柳花满店香，吴姬压酒唤客尝。(劝客 一作：唤客)
+金陵子弟来相送，欲行不行各尽觞。
+请君试问东流水，别意与之谁短长。
+```
+
+## 关山月
+### 唐代：李白
+```
+明月出天山，苍茫云海间。
+长风几万里，吹度玉门关。
+汉下白登道，胡窥青海湾。
+由来征战地，不见有人还。
+戍客望边邑，思归多苦颜。(望边邑 一作：望边色)
+高楼当此夜，叹息未应闲。
+```
+
+## 月下独酌四首
 ### 唐代：李白
 ```
 花间一壶酒，独酌无相亲。
@@ -946,6 +1221,153 @@
 我歌月徘徊，我舞影零乱。
 醒时同交欢，醉后各分散。(同交欢 一作：相交欢)
 永结无情游，相期邈云汉。
+
+天若不爱酒，酒星不在天。
+地若不爱酒，地应无酒泉。
+天地既爱酒，爱酒不愧天。
+已闻清比圣，复道浊如贤。
+贤圣既已饮，何必求神仙。
+三杯通大道，一斗合自然。
+但得酒中趣，勿为醒者传。
+
+三月咸阳城，千花昼如锦。
+谁能春独愁，对此径须饮。
+穷通与修短，造化夙所禀。
+一樽齐死生，万事固难审。
+醉後失天地，兀然就孤枕。
+不知有吾身，此乐最为甚。
+
+穷愁千万端，美酒三百杯。
+愁多酒虽少，酒倾愁不来。
+所以知酒圣，酒酣心自开。
+辞粟卧首阳，屡空饥颜回。
+当代不乐饮，虚名安用哉。
+蟹螯即金液，糟丘是蓬莱。
+且须饮美酒，乘月醉高台。
+```
+
+## 古朗月行
+### 唐代：李白
+```
+小时不识月，呼作白玉盘。
+又疑瑶台镜，飞在青云端。(青云 一作：白云)
+仙人垂两足，桂树何团团。
+白兔捣药成，问言与谁餐？
+蟾蜍蚀圆影，大明夜已残。
+羿昔落九乌，天人清且安。
+阴精此沦惑，去去不足观。
+忧来其如何？凄怆摧心肝。
+```
+
+## 夜宿山寺
+### 唐代：李白
+```
+危楼高百尺，手可摘星辰。
+不敢高声语，恐惊天上人。
+```
+
+## 清平调·其一
+### 唐代：李白
+```
+云想衣裳花想容，春风拂槛露华浓。 
+若非群玉山头见，会向瑶台月下逢。
+```
+
+## 长相思·其一
+### 唐代：李白
+```
+长相思，在长安。
+络纬秋啼金井阑，微霜凄凄簟色寒。
+孤灯不明思欲绝，卷帷望月空长叹。
+美人如花隔云端！
+上有青冥之长天，下有渌水之波澜。
+天长路远魂飞苦，梦魂不到关山难。
+长相思，摧心肝！
+```
+
+## 静夜思
+### 唐代：李白
+```
+床前明月光，疑是地上霜。
+举头望明月，低头思故乡。
+```
+
+## 越中览古
+### 唐代：李白
+```
+越王勾践破吴归，义士还乡尽锦衣。 
+宫女如花满春殿，只今惟有鹧鸪飞。
+```
+
+## 苏台览古
+### 唐代：李白
+```
+旧苑荒台杨柳新，菱歌清唱不胜春。 
+只今惟有西江月，曾照吴王宫里人。
+```
+
+## 望天门山
+### 唐代：李白
+```
+天门中断楚江开，碧水东流至此回。
+两岸青山相对出，孤帆一片日边来。
+```
+
+## 渡荆门送别
+### 唐代：李白
+```
+渡远荆门外，来从楚国游。
+山随平野尽，江入大荒流。
+月下飞天镜，云生结海楼。
+仍怜故乡水，万里送行舟。
+```
+
+## 北风行
+### 唐代：李白
+```
+烛龙栖寒门，光曜犹旦开。
+日月照之何不及此？惟有北风号怒天上来。
+燕山雪花大如席，片片吹落轩辕台。
+幽州思妇十二月，停歌罢笑双蛾摧。
+倚门望行人，念君长城苦寒良可哀。
+别时提剑救边去，遗此虎文金鞞靫。
+中有一双白羽箭，蜘蛛结网生尘埃。
+箭空在，人今战死不复回。
+不忍见此物，焚之已成灰。
+黄河捧土尚可塞，北风雨雪恨难裁。
+```
+
+## 庐山谣寄卢侍御虚舟
+### 唐代：李白
+```
+我本楚狂人，凤歌笑孔丘。
+手持绿玉杖，朝别黄鹤楼。
+五岳寻仙不辞远，一生好入名山游。
+庐山秀出南斗傍，屏风九叠云锦张。
+影落明湖青黛光，金阙前开二峰长，银河倒挂三石梁。
+香炉瀑布遥相望，回崖沓嶂凌苍苍。
+翠影红霞映朝日，鸟飞不到吴天长。
+登高壮观天地间，大江茫茫去不还。
+黄云万里动风色，白波九道流雪山。
+好为庐山谣，兴因庐山发。
+闲窥石镜清我心，谢公行处苍苔没。
+早服还丹无世情，琴心三叠道初成。
+遥见仙人彩云里，手把芙蓉朝玉京。
+先期汗漫九垓上，愿接卢敖游太清。
+```
+
+## 春夜宴桃李园序 / 春夜宴从弟桃花园序
+### 唐代：李白
+```
+夫天地者，万物之逆旅也；
+光阴者，百代之过客也。
+而浮生若梦，为欢几何？
+古人秉烛夜游，良有以也。
+况阳春召我以烟景，大块假我以文章。
+会桃花之芳园，序天伦之乐事。
+群季俊秀，皆为惠连；吾人咏歌，独惭康乐。
+幽赏未已，高谈转清。开琼筵以坐花，飞羽觞而醉月。
+不有佳咏，何伸雅怀？如诗不成，罚依金谷酒数。(桃花 一作：桃李)
 ```
 
 ## 蜀道难
@@ -972,6 +1394,50 @@
 朝避猛虎，夕避长蛇；磨牙吮血，杀人如麻。
 锦城虽云乐，不如早还家。
 蜀道之难,难于上青天，侧身西望长咨嗟！
+```
+
+## 将进酒
+### 唐代：李白
+```
+君不见，黄河之水天上来，奔流到海不复回。
+君不见，高堂明镜悲白发，朝如青丝暮成雪。
+人生得意须尽欢，莫使金樽空对月。
+天生我材必有用，千金散尽还复来。
+烹羊宰牛且为乐，会须一饮三百杯。
+岑夫子，丹丘生，将进酒，杯莫停。
+与君歌一曲，请君为我倾耳听。(倾耳听 一作：侧耳听)
+钟鼓馔玉不足贵，但愿长醉不复醒。(不足贵 一作：何足贵；不复醒 一作：不愿醒/不用醒)
+古来圣贤皆寂寞，惟有饮者留其名。(古来 一作：自古；惟 通：唯)
+陈王昔时宴平乐，斗酒十千恣欢谑。
+主人何为言少钱，径须沽取对君酌。
+五花马，千金裘，呼儿将出换美酒，与尔同销万古愁。
+```
+
+## 梦游天姥吟留别 / 梦游天姥山别东鲁诸公
+### 唐代：李白
+```
+海客谈瀛洲，烟涛微茫信难求；
+越人语天姥，云霞明灭或可睹。
+天姥连天向天横，势拔五岳掩赤城。
+天台四万八千丈，对此欲倒东南倾。(四万 一作：一万)
+我欲因之梦吴越，一夜飞度镜湖月。(度 通：渡)
+湖月照我影，送我至剡溪。
+谢公宿处今尚在，渌水荡漾清猿啼。
+脚著谢公屐，身登青云梯。
+半壁见海日，空中闻天鸡。
+千岩万转路不定，迷花倚石忽已暝。
+熊咆龙吟殷岩泉，栗深林兮惊层巅。
+云青青兮欲雨，水澹澹兮生烟。
+列缺霹雳，丘峦崩摧。
+洞天石扉，訇然中开。
+青冥浩荡不见底，日月照耀金银台。 
+霓为衣兮风为马，云之君兮纷纷而来下。
+虎鼓瑟兮鸾回车，仙之人兮列如麻。
+忽魂悸以魄动，恍惊起而长嗟。
+惟觉时之枕席，失向来之烟霞。
+世间行乐亦如此，古来万事东流水。
+别君去兮何时还？且放白鹿青崖间，须行即骑访名山。
+安能摧眉折腰事权贵，使我不得开心颜!
 ```
 
 ## 黄鹤楼 / 登黄鹤楼
@@ -1257,6 +1723,24 @@
 自经丧乱少睡眠，长夜沾湿何由彻?
 安得广厦千万间，大庇天下寒士俱欢颜，风雨不动安如山。
 呜呼！何时眼前突兀见此屋，吾庐独破受冻死亦足！(死亦足 一作：死意足）
+```
+
+## 客至
+### 代：杜甫
+```
+舍南舍北皆春水，但见群鸥日日来。
+花径不曾缘客扫，蓬门今始为君开。
+盘飧市远无兼味，樽酒家贫只旧醅。
+肯与邻翁相对饮，隔篱呼取尽馀杯。(馀 通：余)
+```
+
+## 登楼
+### 唐代：杜甫
+```
+花近高楼伤客心，万方多难此登临。
+锦江春色来天地，玉垒浮云变古今。
+北极朝廷终不改，西山寇盗莫相侵。
+可怜后主还祠庙，日暮聊为《梁甫吟》。(梁甫 一作：梁父)
 ```
 
 ## 春夜喜雨
