--- a/poetry/清诗.md
+++ b/poetry/清诗.md
@@ -71,6 +71,20 @@
 若容相访饮牛津，相对忘贫。
 ```
 
+## 己亥杂诗·其五
+### 清代：龚自珍
+```
+浩荡离愁白日斜，吟鞭东指即天涯。
+落红不是无情物，化作春泥更护花。
+```
+
+## 己亥杂诗·其二百二十
+### 清代：龚自珍
+```
+九州生气恃风雷，万马齐喑究可哀。
+我劝天公重抖擞，不拘一格降人才。
+```
+
 ## 马嵬
 ### 清代：袁枚
 ```
