--- a/poetry/现代诗.md
+++ b/poetry/现代诗.md
@@ -173,6 +173,135 @@
 埋骨何须桑梓地，人生无处不青山。
 ```
 
+## 沁园春·雪
+### 近现代：毛泽东
+```
+北国风光，千里冰封，万里雪飘。
+望长城内外，惟余莽莽；大河上下，顿失滔滔。
+山舞银蛇，原驰蜡象，欲与天公试比高。
+须晴日，看红装素裹，分外妖娆。
+江山如此多娇，引无数英雄竞折腰。
+惜秦皇汉武，略输文采；唐宗宋祖，稍逊风骚。
+一代天骄，成吉思汗，只识弯弓射大雕。
+俱往矣，数风流人物，还看今朝。
+```
+
+## 水调歌头·重上井冈山
+### 近现代：毛泽东
+```
+久有凌云志，重上井冈山。
+千里来寻故地，旧貌变新颜。
+到处莺歌燕舞，更有潺潺流水，高路入云端。
+过了黄洋界，险处不须看。
+
+风雷动，旌旗奋，是人寰。
+三十八年过去，弹指一挥间。
+可上九天揽月，可下五洋捉鳖，谈笑凯歌还。
+世上无难事，只要肯登攀。
+```
+
+## 蝶恋花·答李淑一
+### 近现代：毛泽东
+```
+我失骄杨君失柳，杨柳轻扬直上重霄九。
+问讯吴刚何所有，吴刚捧出桂花酒。
+寂寞嫦娥舒广袖，万里长空且为忠魂舞。
+忽报人间曾伏虎，泪飞顿作倾盆雨。
+```
+
+## 七绝·咏蛙
+### 近现代：毛泽东
+```
+独坐池塘如虎踞，绿荫树下养精神。
+春来我不先开口，哪个虫儿敢作声。
+```
+
+## 沁园春·长沙
+### 近现代：毛泽东
+```
+独立寒秋，湘江北去，橘子洲头。
+看万山红遍，层林尽染；漫江碧透，百舸争流。
+鹰击长空，鱼翔浅底，万类霜天竞自由。
+怅寥廓，问苍茫大地，谁主沉浮？
+携来百侣曾游，忆往昔峥嵘岁月稠。
+恰同学少年，风华正茂；书生意气，挥斥方遒。
+指点江山，激扬文字，粪土当年万户侯。 
+曾记否，到中流击水，浪遏飞舟？
+```
+
+## 卜算子·咏梅
+### 近现代：毛泽东
+
+读陆游咏梅词，反其意而用之。
+```
+风雨送春归，飞雪迎春到。已是悬崖百丈冰，犹有花枝俏。
+俏也不争春，只把春来报。待到山花烂漫时，她在丛中笑。
+```
+
+## 忆秦娥·娄山关
+### 近现代：毛泽东
+```
+西风烈，长空雁叫霜晨月。
+霜晨月，马蹄声碎，喇叭声咽。
+雄关漫道真如铁，而今迈步从头越。
+从头越，苍山如海，残阳如血。
+```
+
+## 七律·人民解放军占领南京
+### 近现代：毛泽东
+```
+钟山风雨起苍黄，百万雄师过大江。
+虎踞龙盘今胜昔，天翻地覆慨而慷。
+宜将剩勇追穷寇，不可沽名学霸王。
+天若有情天亦老，人间正道是沧桑。
+```
+
+## 七律·长征
+### 近现代：毛泽东
+```
+红军不怕远征难，万水千山只等闲。
+五岭逶迤腾细浪，乌蒙磅礴走泥丸。
+金沙水拍云崖暖，大渡桥横铁索寒。
+更喜岷山千里雪，三军过后尽开颜。
+```
+
+## 清平乐·六盘山
+### 近现代：毛泽东
+```
+天高云淡，
+望断南飞雁。
+不到长城非好汉，
+屈指行程二万。
+
+六盘山上高峰，
+红旗漫卷西风。
+今日长缨在手，
+何时缚住苍龙？
+```
+
+## 采桑子·重阳
+### 近现代：毛泽东
+```
+人生易老天难老，岁岁重阳。今又重阳，战地黄花分外香。
+一年一度秋风劲，不似春光。胜似春光，廖廓江天万里霜。
+```
+
+## 浪淘沙·北戴河
+### 近现代：毛泽东
+```
+大雨落幽燕，
+白浪滔天，
+秦皇岛外打鱼船。
+一片汪洋都不见，
+知向谁边？
+
+往事越千年，
+魏武挥鞭，
+东临碣石有遗篇。
+萧瑟秋风今又是，
+换了人间。
+```
+
 ## 寻李白
 ### 余光中
 
