--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -56,3 +56,4 @@
 [Day 054 - 地图](day054.html)  
 [Day 055 - 输入框的历史记录](day055.html)  
 [Day 056 - 懒加载](day056.html)  
+[Day 057 - 节拍器](day057.html)  
