--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -1,7 +1,7 @@
 ## 100天100个项目
 
 [Day 001 - 注册页面](day001.html)  
-[Day 002 - 轮播图](day002.html)  
+[Day 002 - 轮播图](day002.html)  //TODO
 [Day 003 - 下拉菜单](day003.html)  
 [Day 004 - 响应式下拉菜单](day004.html)  
 [Day 005 - mask 遮罩层](day005.html)  
@@ -21,7 +21,7 @@
 [Day 019 - 手风琴效果菜单](day019.html)  
 [Day 020 - Todo](day020.html)  
 [Day 021 - 网页版微信]()  
-[Day 022 - 弹幕](day022.html)  
+[Day 022 - 弹幕](day022.html)  //TODO
 [Day 023 - 苹果电脑外观效果图](day023.html)  
 [Day 024 - Max OS X 的 Dock效果]()  
 [Day 025 - 模拟书本的翻页效果]()  
@@ -57,3 +57,4 @@
 [Day 055 - 输入框的历史记录](day055.html)  
 [Day 056 - 懒加载](day056.html)  
 [Day 057 - 节拍器](day057.html)  
+[Day 058 - 贝塞尔曲线](day058.html)  //TODO
