--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -58,3 +58,4 @@
 [Day 056 - 懒加载](day056.html)  
 [Day 057 - 节拍器](day057.html)  
 [Day 058 - 贝塞尔曲线](day058.html)  //TODO
+[Day 059 - 太阳系](day059.html)  //TODO
