--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -59,3 +59,4 @@
 [Day 057 - 节拍器](day057.html)  
 [Day 058 - 贝塞尔曲线](day058.html)  //TODO
 [Day 059 - 太阳系](day059.html)  //TODO
+[Day 060 - 图章制作](day060.html)  //TODO
