--- a/poetry/明词.md
+++ b/poetry/明词.md
@@ -21,3 +21,11 @@
 白发渔樵江渚上，惯看秋月春风。
 一壶浊酒喜相逢。古今多少事，都付笑谈中。
 ```
+
+## 朝天子·咏喇叭
+### 明代：王磐
+```
+喇叭，唢呐，曲儿小腔儿大。官船来往乱如麻，全仗你抬声价。(唢呐 一作：锁呐； 声价 一作：身价)
+军听了军愁，民听了民怕。哪里去辨甚么真共假？
+眼见的吹翻了这家，吹伤了那家，只吹的水尽鹅飞罢！
+```
