--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -60,3 +60,4 @@
 [Day 058 - 贝塞尔曲线](day058.html)  //TODO
 [Day 059 - 太阳系](day059.html)  //TODO
 [Day 060 - 图章制作](day060.html)  //TODO
+[Day 061 - 随机获取一句诗词](day061.html)
