update some articles

--- a/poetry/唐诗.md
+++ b/poetry/唐诗.md
@@ -135,6 +135,14 @@
 蓬山此去无多路，青鸟殷勤为探看。(蓬山 一作：蓬莱)
 ```
 
+## 赠荷花
+### 唐代：李商隐
+```
+世间花叶不相伦，花入金盆叶作尘。
+惟有绿荷红菡萏，卷舒开合任天真。
+此花此叶常相映，翠减红衰愁杀人。(常相映 一作：长相映)
+```
+
 ## 无题四首
 ### 唐代：李商隐
 ```
@@ -194,6 +202,13 @@
 ```
 汉水方城带百蛮，四邻谁道乱周班。
 如何一梦高唐雨，自此无心入武关。
+```
+
+## 小松
+### 唐代：杜荀鹤
+```
+自小刺头深草里，而今渐觉出蓬蒿。 
+时人不识凌云木，直待凌云始道高。
 ```
 
 ## 金陵晚望
