--- a/poetry/元词.md
+++ b/poetry/元词.md
@@ -16,6 +16,13 @@
 落花有意随流水，流水无心恋落花。
 ```
 
+## 凭栏人·闺怨
+### 元代：王元鼎
+```
+垂柳依依惹暮烟，素魄娟娟当绣轩。妾身独自眠，月圆人未圆。
+啼得花残声更悲，叫得春归郎未知。杜鹃奴倩伊，问郎何日归？
+```
+
 ## 折桂令·春情
 ### 元代：徐再思
 ```
