--- a/poetry/宋词.md
+++ b/poetry/宋词.md
@@ -708,6 +708,15 @@
 知我者，二三子。
 ```
 
+## 虞美人·宜州见梅作
+### 宋代：黄庭坚
+```
+天涯也有江南信。梅破知春近。
+夜阑风细得香迟。不道晓来开遍、向南枝。 
+玉台弄粉花应妒。飘到眉心住。
+平生个里愿杯深。去国十年老尽、少年心。
+```
+
 ## 河北民
 ### 宋代：王安石
 ```
