--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -7,7 +7,7 @@
 [Day 005 - mask 遮罩层](day005.html)  
 [Day 006 - background各项属性](day006.html)  
 [Day 007 - 旋转相册](day007.html)  
-[Day 008 - Windows7 桌面](day008.html)  
+[Day 008 - ]()  
 [Day 009 - 元素拖动](day009.html)  
 [Day 010 - js实现网页版计算器](day010.html)  
 [Day 011 - 单词查询](day011.html)  
@@ -59,5 +59,5 @@
 [Day 057 - 节拍器](day057.html)  
 [Day 058 - 贝塞尔曲线](day058.html)  //TODO  
 [Day 059 - 太阳系](day059.html)  //TODO  
-[Day 060 - 图章制作]()  //TODO  
+[Day 060 - ]()  //TODO  
 [Day 061 - 随机获取一句诗词](day061.html)
