--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -7,7 +7,7 @@
 [Day 005 - mask 遮罩层](day005.html)  
 [Day 006 - background各项属性](day006.html)  
 [Day 007 - 旋转相册](day007.html)  
-[Day 008 - ]()  
+[Day 008 - ](day008.html)  
 [Day 009 - 元素拖动](day009.html)  
 [Day 010 - js实现网页版计算器](day010.html)  
 [Day 011 - 单词查询](day011.html)  
