--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -1,7 +1,7 @@
 ## 100天100个项目
 
 [Day 001 - 注册页面](day001.html)  
-[Day 002 - 轮播图](day002.html)  //TODO  
+[Day 002 - 原生JS实现轮播图](day002.html)  //TODO  
 [Day 003 - 下拉菜单](day003.html)  
 [Day 004 - 响应式下拉菜单](day004.html)  
 [Day 005 - mask 遮罩层](day005.html)  
@@ -59,5 +59,5 @@
 [Day 057 - 节拍器](day057.html)  
 [Day 058 - 贝塞尔曲线](day058.html)  //TODO  
 [Day 059 - 太阳系](day059.html)  //TODO  
-[Day 060 - ]()  //TODO  
-[Day 061 - 随机获取一句诗词](day061.html)
+[Day 060 - JavaScript实现撞击边界反弹](day060.html)  //TODO  
+[Day 061 - 随机获取一句诗词](day061.html)  
