--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -7,7 +7,7 @@
 [Day 005 - mask 遮罩层](day005.html)  
 [Day 006 - background各项属性](day006.html)  
 [Day 007 - 旋转相册](day007.html)  
-[Day 008 - ](day008.html)  
+[Day 008 - 点击图片放大至前端](day008.html)  
 [Day 009 - 元素拖动](day009.html)  
 [Day 010 - js实现网页版计算器](day010.html)  
 [Day 011 - 单词查询](day011.html)  
@@ -54,10 +54,10 @@
 [Day 052 - transform：3D魔方](day052.html)  
 [Day 053 - 钟表](day053.html)  
 [Day 054 - 地图](day054.html)  
-[Day 055 - 输入框的历史记录](day055.html)  
+[Day 055 - 锤子科技首页 banner3D效果](day055.html)  
 [Day 056 - 懒加载](day056.html)  
 [Day 057 - 节拍器](day057.html)  
 [Day 058 - 贝塞尔曲线](day058.html)  //TODO  
 [Day 059 - 太阳系](day059.html)  //TODO  
-[Day 060 - JavaScript实现撞击边界反弹](day060.html)  //TODO  
+[Day 060 - JavaScript实现撞击边界反弹](day060.html)
 [Day 061 - 随机获取一句诗词](day061.html)  
