--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -26,12 +26,12 @@
 [Day 024 - Max OS X 的 Dock效果]()  
 [Day 025 - 模拟书本的翻页效果]()  
 [Day 026 - Fancy watch](day026.html)  
-[Day 027 - 放大镜效果](day027.html)  
+[Day 027 - 放大镜效果](day027.html)  // TODO  
 [Day 028 - 返回顶部](day028.html)  
 [Day 029 - 像素画板](day029.html)  
 [Day 030 - 二，八，十，十六进制的转换](day030.html)  
 [Day 031 - 富文本编辑器 version 0.1](day031.html)  
-[Day 032 - 日历](day032.html)  
+[Day 032 - 日历](day032.html)  // TOTO  
 [Day 033 - 搜索提示](day033.html)  
 [Day 034 - 模仿知乎点赞动画](day034.html)  
 [Day 035 - 各种物理量的计算](day035.html)  
@@ -56,7 +56,7 @@
 [Day 054 - 地图](day054.html)  
 [Day 055 - 锤子科技首页 banner3D效果](day055.html)  
 [Day 056 - 懒加载](day056.html)  
-[Day 057 - 节拍器](day057.html)  
+[Day 057 - 节拍器](day057.html)  // TODO  
 [Day 058 - 贝塞尔曲线](day058.html)  //TODO  
 [Day 059 - 太阳系](day059.html)  //TODO  
 [Day 060 - JavaScript实现撞击边界反弹](day060.html)
